--- a/data/cards/14166715.yaml
+++ b/data/cards/14166715.yaml
@@ -9,7 +9,7 @@ name:
   pt: Recette de Viande (Receita de Carne)
   ja: <ruby>Ｒｅｃｅｔｔｅ ｄｅ Ｖｉａｎｄｅ<rt>ルセット・ド・ヴィアンド</rt></ruby>～<ruby>肉<rt>にく</rt></ruby><ruby>料<rt>りょう</rt></ruby><ruby>理<rt>り</rt></ruby>のレシピ～
   ja_romaji: Rusetto Do Viando ~ Nikuryōri no Reshipi ~
-  ko:
+  ko: Recette de Viande~고기요리 요리법~
   ko_rr:
   zh-TW:
   zh-CN: Recette de Viande~肉料理的食谱~
@@ -35,7 +35,9 @@ text:
   ja: |-
     「ヌーベルズ」儀式モンスターの降臨に必要。①：レベルの合計が儀式召喚するモンスターのレベル以上になるように、自分の手札・フィールドのモンスターをリリースし、手札から「ヌーベルズ」儀式モンスター１体を儀式召喚する。この効果で「コンフィラス・ド・ヌーベルズ」を儀式召喚した場合、さらに以下の効果を適用できる。
     ●相手フィールドの守備表示モンスターを全て表側攻撃表示にする。
-  ko:
+  ko: |-
+    "누밸즈" 의식 몬스터의 의식 소환에 필요. ①: 레벨의 합계가 의식 소환할 몬스터의 레벨 이상이 되도록, 자신의 패 / 필드의 몬스터를 릴리스하고, 패에서 "누밸즈" 의식 몬스터 1장을 의식 소환한다. 이 효과로 "콩피라스 드 누밸즈"를 의식 소환했을 경우, 추가로 이하의 효과를 적용할 수 있다.
+    ●상대 필드의 수비 표시 몬스터를 전부 앞면 공격 표시로 한다.
   zh-TW:
   zh-CN: |-
     「ヌーベルズ／新式魔餐」仪式怪兽的降临所必须。①：使等级合计为要仪式召唤的怪兽的等级以上地，将自己的手牌或场上的怪兽解放，从手牌仪式召唤1只「ヌーベルズ／新式魔餐」仪式怪兽。用这个效果仪式召唤「コンフィラス・ド・ヌーベルズ／新式魔餐 油封肉佛拉士」的场合，可以再适用以下的效果。
