--- a/data/cards/15001940.yaml
+++ b/data/cards/15001940.yaml
@@ -9,7 +9,7 @@ name:
   pt: Foie Glasya de Nouvelles
   ja: フォアグラシャ・ド・ヌーベルズ
   ja_romaji: Foagurasha Do Nūberuzu
-  ko:
+  ko: 포아글라샤 드 누밸즈
   ko_rr:
   zh-TW:
   zh-CN: 新式魔餐 酱鹅肝格剌西亚
@@ -28,7 +28,8 @@ text:
     Você pode Invocar este card por Invocação-Ritual com um card "Receita". Se este card for Invocado por Invocação-Especial: você pode escolher até 3 cards em quaisquer Cemitérios; embaralhe-os no Deck. Quando um card ou efeito for ativado que escolha um monstro no campo como alvo, ou quando um monstro for alvo de um ataque (Efeito Rápido): você pode oferecer como Tributo 1 monstro "Nouvelles" que você controla e 1 monstro em Posição de Ataque em qualquer campo e, se isso acontecer, Invoque por Invocação-Especial 1 Monstro de Ritual "Nouvelles" de Nível 5 ou 6 da sua mão ou do Deck. Você só pode usar cada efeito de "Foie Glasya de Nouvelles" uma vez por turno.
   ja: |-
     「レシピ」カードにより降臨。このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚に成功した場合、自分・相手の墓地のカードを合計３枚まで対象として発動できる。そのカードを持ち主のデッキに戻す。②：フィールドのモンスターが攻撃・効果の対象になった時に発動できる。自分フィールドの「ヌーベルズ」モンスター１体と自分・相手フィールドの攻撃表示モンスター１体をリリースし、手札・デッキからレベル５・６の「ヌーベルズ」儀式モンスター１体を特殊召喚する。
-  ko:
+  ko: |-
+    "요리법" 카드에 의해 의식 소환. 이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 특수 소환에 성공했을 경우, 자신 / 상대 묘지의 카드를 합계 3장까지 대상으로 하고 발동할 수 있다. 그 카드를 주인의 덱으로 되돌린다. ②: 필드의 몬스터가 공격 / 효과의 대상이 되었을 때에 발동할 수 있다. 자신 필드의 "누밸즈" 몬스터 1장과 자신 / 상대 필드의 공격 표시 몬스터 1장을 릴리스하고, 패 / 덱에서 레벨 5 / 6 의 "누밸즈" 의식 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
     藉由「レシピ／食谱」卡降临。这个卡名的①②效果1回合各能使用1次。①：这张卡特殊召唤成功的场合，可以以自己或对手的墓地的合计最多3张卡为对象发动。使那些卡返回持有者的卡组。②：场上的怪兽成为攻击或效果的对象时可以发动。将自己场上的1只「ヌーベルズ／新式魔餐」怪兽和自己或对手场上的1只攻击表示怪兽解放，从手牌或卡组特殊召唤1只等级5或6的「ヌーベルズ／新式魔餐」仪式怪兽。
