--- a/data/cards/52495649.yaml
+++ b/data/cards/52495649.yaml
@@ -9,7 +9,7 @@ name:
   pt: Balameuniere de Nouvelles
   ja: バラムニエル・ド・ヌーベルズ
   ja_romaji: Baramunieru Do Nūberuzu
-  ko:
+  ko: 발라무니에르 드 누밸즈
   ko_rr:
   zh-TW:
   zh-CN: 新式魔餐 黄油烤鱼拜朗
@@ -28,7 +28,8 @@ text:
     Você pode Invocar este card por Invocação-Ritual com um card "Receita". Se este card for Invocado por Invocação-Especial: você pode adicionar 1 card "Nouvelles" ou "Receita" do seu Deck à sua mão. Você pode escolher 1 monstro em Posição de Ataque que seu oponente controla; ofereça-o como Tributo e, se isso acontecer, Invoque por Invocação-Especial 1 Monstro de Ritual "Nouvelles" de Nível 6 da sua mão ou do Deck. Este é um Efeito Rápido se este card foi Invocado por Invocação-Especial pelo efeito de um monstro "Nouvelles". Você só pode usar cada efeito de "Balameuniere de Nouvelles" uma vez por turno.
   ja: |-
     「レシピ」カードにより降臨。このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚に成功した場合に発動できる。「ヌーベルズ」カードまたは「レシピ」カード１枚をデッキから手札に加える。②：相手フィールドの攻撃表示モンスター１体を対象として発動できる。そのモンスターをリリースし、手札・デッキからレベル６の「ヌーベルズ」儀式モンスター１体を特殊召喚する。このカードが「ヌーベルズ」モンスターの効果で特殊召喚されている場合、この効果は相手ターンでも発動できる。
-  ko:
+  ko: |-
+    "요리법" 카드에 의해 의식 소환. 이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 특수 소환에 성공했을 경우에 발동할 수 있다. "누밸즈" 카드 또는 "요리법" 카드 1장을 덱에서 패에 넣는다. ②: 상대 필드의 공격 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 릴리스하고, 패 / 덱에서 레벨 6 의 "누밸즈" 의식 몬스터 1장을 특수 소환한다. 이 카드가 "누밸즈" 몬스터의 효과로 특수 소환되어 있을 경우, 이 효과는 상대 턴에도 발동할 수 있다.
   zh-TW:
   zh-CN: |-
     藉由「レシピ／食谱」卡降临。这个卡名的①②效果1回合各能使用1次。①：这张卡特殊召唤成功的场合可以发动。从卡组将1张「ヌーベルズ／新式魔餐」卡或者「レシピ／食谱」卡加入手牌。②：可以以对手场上的1只攻击表示怪兽为对象发动。将那只怪兽解放，从手牌或卡组特殊召唤1只等级6的「ヌーベルズ／新式魔餐」仪式怪兽。这张卡是被「ヌーベルズ／新式魔餐」怪兽的效果特殊召唤而在场的场合，这个效果在对手的回合也能发动。
