--- a/data/cards/54562327.yaml
+++ b/data/cards/54562327.yaml
@@ -9,7 +9,7 @@ name:
   pt: Aposte sua Alma!
   ja: <ruby>Ｓｔａｋｅ<rt>ステイク</rt></ruby> <ruby>Ｙｏｕｒ<rt>ユア</rt></ruby> <ruby>Ｓｏｕｌ<rt>ソウル</rt></ruby>！
   ja_romaji: Suteiku Yua Souru!
-  ko:
+  ko: Stake Your Soul!
   ko_rr:
   zh-TW:
   zh-CN: 赌上你的灵魂！
@@ -28,7 +28,8 @@ text:
     Revele 1 monstro na sua mão; Invoque por Invocação-Especial 1 monstro "Alma Aniquiladora" com o mesmo Atributo, mas um nome diferente, do seu Deck, mas devolva-o para a mão durante a Fase Final. Você só pode ativar 1 "Aposte sua Alma!" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：手札のモンスター１体を相手に見せて発動できる。見せたモンスターとはカード名が異なり、属性が同じ「ＶＳ」モンスター１体をデッキから特殊召喚する。この効果で特殊召喚したモンスターはエンドフェイズに持ち主の手札に戻る。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 패의 몬스터 1장을 상대에게 보여주고 발동할 수 있다. 보여준 몬스터와는 카드명이 다르고, 속성이 같은 "VS(뱅키시 소울)" 몬스터 1장을 덱에서 특수 소환한다. 이 효과로 특수 소환한 몬스터는 엔드 페이즈에 주인의 패로 되돌아간다.
   zh-TW:
   zh-CN: |-
     这个卡名的卡1回合只能发动1张。①：可以向对手展示手牌的1只怪兽发动。从卡组特殊召唤1只与展示的怪兽卡名不同、属性相同的「VS／征服之魂」怪兽。用这个效果特殊召唤的怪兽在结束阶段返回持有者的手牌。 ​​​
