--- a/data/cards/80738884.yaml
+++ b/data/cards/80738884.yaml
@@ -9,7 +9,7 @@ name:
   pt: Alma Aniquiladora César da Calamidade
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> <ruby>龍帝ノ槍<rt>カラミティ・カイザー</rt></ruby>
   ja_romaji: Vankisshu Souru Karamiti Kaizā
-  ko:
+  ko: VS 캘러미티 카이저
   ko_rr:
   zh-TW:
   zh-CN: 征服之魂 龙帝之枪
@@ -28,7 +28,8 @@ text:
     Quando um Card de Magia/Armadilha ou efeito de monstro do oponente for ativado que escolha como alvo um ou mais cards que você controla, enquanto você controlar um monstro "Alma Aniquiladora": negue a ativação e, se isso acontecer, destrua esse card e, depois, você pode causar dano ao seu oponente igual ao ATK de 1 monstro "Alma Aniquiladora" que você controla. Você só pode ativar 1 "Alma Aniquiladora César da Calamidade" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：自分フィールドに「ＶＳ」モンスターが存在し、自分フィールドのカードを対象とするモンスターの効果・魔法・罠カードを相手が発動した時に発動できる。その発動を無効にし破壊する。その後、自分フィールドの「ＶＳ」モンスター１体を選んでその攻撃力分のダメージを相手に与える事ができる。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드에 "VS(뱅키시 소울)" 몬스터가 존재하고, 자신 필드의 카드를 대상으로 하는 몬스터의 효과 / 마법 / 함정 카드를 상대가 발동했을 때에 발동할 수 있다. 그 발동을 무효로 하고 파괴한다. 그 후, 자신 필드의 "VS(뱅키시 소울)" 몬스터 1장을 고르고 그 공격력만큼의 데미지를 상대에게 줄 수 있다.
   zh-TW:
   zh-CN: |-
     这个卡名的卡1回合只能发动1张。①：自己场上有「VS／征服之魂」怪兽存在，以自己场上的卡为对象的怪兽的效果或魔法陷阱卡由对手发动时可以发动。使其发动无效并破坏。那之后，可以选自己场上的1只「VS／征服之魂」怪兽，给予对手其攻击力数值的伤害。
