--- a/data/cards/92895501.yaml
+++ b/data/cards/92895501.yaml
@@ -9,7 +9,7 @@ name:
   pt: Alma Aniquiladora Borguer Pesado
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> ヘヴィ・ボーガー
   ja_romaji: Vankisshu Souru Hevi Bōgā
-  ko:
+  ko: VS 헤비 보거
   ko_rr:
   zh-TW:
   zh-CN: 征服之魂 重型博格
@@ -46,7 +46,8 @@ text:
     Você só pode usar cada efeito de "Alma Aniquiladora Borguer Pesado" uma vez por turno e não pode ativar mais que 1 na mesma Corrente.
   ja: |-
     このカード名の①②の効果は、それぞれ１ターンに１度しか使用できず、同一チェーン上では発動できない。①：自分・相手のメインフェイズに、機械族以外の自分フィールドの「ＶＳ」モンスター１体を対象として発動できる。そのモンスターを手札に戻し、このカードを手札から特殊召喚する。②：自分・相手ターンに、以下から１つ選択し、その属性の手札のモンスターを１体ずつ相手に見せて発動できる。●闇：自分はデッキから１枚ドローする。●地・炎：相手に１５００ダメージを与える。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는, 각각 1턴에 1번밖에 사용할 수 없으며, 동일한 체인 위에서는 발동할 수 없다. ①: 자신 / 상대의 메인 페이즈에, 기계족 이외의 자신 필드의 "VS(뱅키시 소울)" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 패로 되돌리고, 이 카드를 패에서 특수 소환한다. ②: 자신 / 상대 턴에, 이하에서 1개 선택하여, 그 속성의 패의 몬스터를 1장씩 상대에게 보여주고 발동할 수 있다. ●어둠: 자신은 덱에서 1장 드로우한다. ●땅 / 화염: 상대에게 1500 데미지를 준다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果，1回合各能使用1次且同一连锁上不能发动。①：自己或对手的主要阶段，可以以机械族以外的自己场上的1只「VS／征服之魂」怪兽为对象发动。那只怪兽返回手牌，将这张卡从手牌特殊召唤。②：自己或对手的回合，可以从以下选择1个，向对手展示那些属性的手牌的怪兽各1只发动。●暗：自己从卡组抽1张。●地·炎：给予对手1500伤害。
