--- a/data/cards/05852388.yaml
+++ b/data/cards/05852388.yaml
@@ -9,7 +9,7 @@ name:
   pt: Xeno Meteossauro
   ja: ゼノ・メテオロス
   ja_romaji: Zeno Meteorosu
-  ko:
+  ko: 제노 메테오로스
   ko_rr:
   zh-TW:
   zh-CN: 异度陨石龙
@@ -28,7 +28,8 @@ text:
     Se um ou mais cards forem destruídos em batalha ou por um efeito de card: você pode Invocar este card por Invocação-Especial da sua mão. Durante sua Fase Principal: você pode destruir 1 monstro Dinossauro na sua mão ou no campo e, depois, Invoque por Invocação-Especial 1 Monstro Normal Dinossauro da sua mão ou do Deck e, além disso, você não pode Invocar monstros por Invocação-Especial do Deck Adicional pelo resto deste turno, exceto monstros Dragão, Dinossauro, Serpente Marinha ou Wyrm. Você só pode usar cada efeito de "Xeno Meteossauro" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：カードが戦闘・効果で破壊された場合に発動できる。このカードを手札から特殊召喚する。②：自分メインフェイズに発動できる。自分の手札・フィールドの恐竜族モンスター１体を選んで破壊する。その後、手札・デッキから恐竜族の通常モンスター１体を特殊召喚する。この効果の発動後、ターン終了時まで自分はドラゴン族・恐竜族・海竜族・幻竜族モンスターしかＥＸデッキから特殊召喚できない。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 카드가 전투 / 효과로 파괴되었을 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 자신 메인 페이즈에 발동할 수 있다. 자신의 패 / 필드의 공룡족 몬스터 1장을 고르고 파괴한다. 그 후, 패 / 덱에서 공룡족 일반 몬스터 1장을 특수 소환한다. 이 효과의 발동 후, 턴 종료시까지 자신은 드래곤족 / 공룡족 / 해룡족 / 환룡족 몬스터밖에 엑스트라 덱에서 특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果1回合各能使用1次。①：有卡被战斗或效果破坏的场合可以发动。将这张卡从手牌特殊召唤。②：自己的主要阶段可以发动。选自己的手牌或场上的1只恐龙族怪兽破坏。那之后，从手牌或卡组特殊召唤1只恐龙族的通常怪兽。这个效果发动后，直到回合结束时自己从额外卡组特殊召唤的只能是龙族、恐龙族、海龙族、幻龙族怪兽。
