--- a/data/cards/15388353.yaml
+++ b/data/cards/15388353.yaml
@@ -9,7 +9,7 @@ name:
   pt: Restaurante Nouvelles "À Table"
   ja: <ruby>Ｎｏｕｖｅｌｌｅｚ<rt>ヌーベルズ</rt></ruby> <ruby>Ａｕｂｅｒｇｅ<rt>オーベルジュ</rt></ruby> 『<ruby>À Ｔａｂｌｅ<rt>ア・ターブル</rt></ruby>』
   ja_romaji: Nūberuzu Ōberuju "A Tāburu"
-  ko:
+  ko: Nouvellez Auberge 『À Table』
   ko_rr:
   zh-TW:
   zh-CN: 新式魔餐旅店『上桌』
@@ -28,7 +28,8 @@ text:
     Quando este card for ativado: você pode adicionar 1 card "Receita" do seu Deck ou Cemitério à sua mão. Uma vez por turno: você pode colocar 1 Monstro de Ritual da sua mão no fundo do Deck; compre 1 card. Uma vez por turno, durante sua Fase Final: você pode escolher 2 cards no seu Cemitério, incluindo um card "Receita"; coloque-os no fundo do seu Deck em qualquer ordem e, depois, compre 1 card. Você só pode ativar 1 "Restaurante Nouvelles "À Table"" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：このカードの発動時の効果処理として、自分のデッキ・墓地から「レシピ」カード１枚を選んで手札に加える事ができる。②：１ターンに１度、手札から儀式モンスター１体をデッキの一番下に戻して発動できる。自分はデッキから１枚ドローする。③：自分エンドフェイズに、「レシピ」カードを含む自分の墓地のカード２枚を対象として発動できる。そのカードを好きな順番でデッキの下に戻す。その後、自分はデッキから１枚ドローする。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 이 카드의 발동시의 효과 처리로서, 자신의 덱 / 묘지에서 "요리법" 카드 1장을 고르고 패에 넣을 수 있다. ②: 1턴에 1번, 패에서 의식 몬스터 1장을 덱 맨 아래로 되돌리고 발동할 수 있다. 자신은 덱에서 1장 드로우한다. ③: 자신 엔드 페이즈에, "요리법" 카드를 포함하는 자신 묘지의 카드 2장을 대상으로 하고 발동할 수 있다. 그 카드를 좋아하는 순서대로 덱 아래로 되돌린다. 그 후, 자신은 덱에서 1장 드로우한다.
   zh-TW:
   zh-CN: |-
     这个卡名的卡1回合只能发动1张。①：作为这张卡发动时的效果处理，可以从自己的卡组或墓地选1张「レシピ／食谱」卡加入手牌。②：1回合1次，可以从手牌使1只仪式怪兽返回卡组最下面发动。自己从卡组抽1张。③：自己的结束阶段，可以以包含「レシピ／食谱」卡的自己墓地的2张卡为对象发动。使那些卡按照喜欢的顺序返回卡组下面。那之后，自己从卡组抽1张。
