--- a/data/cards/26223582.yaml
+++ b/data/cards/26223582.yaml
@@ -9,7 +9,7 @@ name:
   pt: Buerillabaisse de Nouvelles
   ja: ブエリヤベース・ド・ヌーベルズ
   ja_romaji: Bueriyabēsu Do Nūberuzu
-  ko:
+  ko: 부에리야베스 드 누밸즈
   ko_rr:
   zh-TW:
   zh-CN: 新式魔餐 炖鱼羹帕尔
@@ -28,7 +28,8 @@ text:
     Você pode Invocar este card por Invocação-Ritual com um card "Receita". Se este card for Invocado por Invocação-Especial: você pode escavar os 5 cards do topo do seu Deck e, se isso acontecer, você pode adicionar 1 card "Nouvelles" escavado à sua mão e, além disso, embaralhe o resto no Deck. Quando um card ou efeito for ativado que escolha este card no campo como alvo, ou quando este card for alvo de um ataque (Efeito Rápido): você pode oferecer como Tributo este card e 1 monstro em Posição de Ataque em qualquer campo e, se isso acontecer, Invoque por Invocação-Especial 1 Monstro de Ritual "Nouvelles" de Nível 2 ou 3 da sua mão ou do Deck. Você só pode usar cada efeito de "Buerillabaisse de Nouvelles" uma vez por turno.
   ja: |-
     「レシピ」カードにより降臨。このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚に成功した場合に発動できる。自分のデッキの上からカードを５枚めくる。その中から「ヌーベルズ」カード１枚を選んで手札に加える事ができる。残りはデッキに戻す。②：フィールドのこのカードが攻撃・効果の対象になった時に発動できる。このカードと自分・相手フィールドの攻撃表示モンスター１体をリリースし、手札・デッキからレベル２・３の「ヌーベルズ」儀式モンスター１体を特殊召喚する。
-  ko:
+  ko: |-
+    "요리법" 카드에 의해 의식 소환. 이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 특수 소환에 성공했을 경우에 발동할 수 있다. 자신의 덱 위에서 카드를 5장 넘긴다. 그 중에서 "누밸즈" 카드 1장을 고르고 패에 넣을 수 있다. 나머지는 덱으로 되돌린다. ②: 필드의 이 카드가 공격 / 효과의 대상이 되었을 때에 발동할 수 있다. 이 카드와 자신 / 상대 필드의 공격 표시 몬스터 1장을 릴리스하고, 패 / 덱에서 레벨 2 / 3 의 "누밸즈" 의식 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
     藉由「レシピ／食谱」卡降临。这个卡名的①②效果1回合各能使用1次。①：这张卡特殊召唤成功的场合可以发动。从自己卡组上面翻开5张卡。可以从那之中选1张「ヌーベルズ／新式魔餐」卡加入手牌。剩下的返回卡组。②：场上的这张卡成为攻击或效果的对象时可以发动。将这张卡和自己或对手场上的1只攻击表示怪兽解放，从手牌或卡组特殊召唤1只等级2或3的「ヌーベルズ／新式魔餐」仪式怪兽。
