--- a/data/cards/27345070.yaml
+++ b/data/cards/27345070.yaml
@@ -9,7 +9,7 @@ name:
   pt: Alma Aniquiladora - Continue?
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> コンティニュー
   ja_romaji: Vankisshu Souru Kontinyū
-  ko:
+  ko: VS 컨티뉴
   ko_rr:
   zh-TW:
   zh-CN: 征服之魂 续命
@@ -28,7 +28,8 @@ text:
     Pague 500 PV e, depois, escolha 1 monstro "Alma Aniquiladora" no seu Cemitério; adicione-o à sua mão ou Invoque-o por Invocação-Especial em Posição de Defesa. Você só pode ativar 1 "Alma Aniquiladora - Continue?" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：５００ＬＰを払い、自分の墓地の「ＶＳ」モンスター１体を対象として発動できる。そのモンスターを手札に加えるか守備表示で特殊召喚する。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 500 LP를 지불하고, 자신 묘지의 "VS(뱅키시 소울)" 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 패에 넣거나 수비 표시로 특수 소환한다.
   zh-TW:
   zh-CN: |-
     这个卡名的卡1回合只能发动1张。①：可以支付500LP，以自己墓地的1只「VS／征服之魂」怪兽为对象发动。将那只怪兽加入手牌或以守备表示特殊召唤。
