--- a/data/cards/29280200.yaml
+++ b/data/cards/29280200.yaml
@@ -9,7 +9,7 @@ name:
   pt: Alma Aniquiladora Dra. Louco Amor
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> <ruby>Ｄｒ．<rt>ドクター</rt></ruby>マッドラヴ
   ja_romaji: Vankisshu Souru Dokutā Maddoravu
-  ko:
+  ko: VS Dr.매드라브
   ko_rr:
   zh-TW:
   zh-CN: 征服之魂 狂恋博士
@@ -46,7 +46,8 @@ text:
     Você só pode usar cada efeito de "Alma Aniquiladora Dra. Louco Amor" uma vez por turno e não pode ativar mais que 1 na mesma Corrente.
   ja: |-
     このカード名の①②の効果は、それぞれ１ターンに１度しか使用できず、同一チェーン上では発動できない。①：このカードが召喚・特殊召喚に成功した場合に発動できる。デッキから「ＶＳ」魔法・罠カード１枚を手札に加える。②：自分・相手ターンに、以下から１つ選択し、その属性の手札のモンスターを１体ずつ相手に見せて発動できる。●闇：相手フィールドの表側表示モンスター１体を選び、その攻撃力・守備力を５００ダウンする。●闇・地：フィールドの守備力が一番低いモンスター１体を持ち主の手札に戻す。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는, 각각 1턴에 1번밖에 사용할 수 없으며, 동일한 체인 위에서는 발동할 수 없다. ①: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "VS(뱅키시 소울)" 마법 / 함정 카드 1장을 패에 넣는다. ②: 자신 / 상대 턴에, 이하에서 1개 선택하여, 그 속성의 패의 몬스터를 1장씩 상대에게 보여주고 발동할 수 있다. ●어둠: 상대 필드의 앞면 표시 몬스터 1장을 고르고, 그 공격력 / 수비력을 500 내린다. ●어둠 / 땅: 필드의 수비력이 가장 낮은 몬스터 1장을 주인의 패로 되돌린다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果，1回合各能使用1次且同一连锁上不能发动。①：这张卡召唤或特殊召唤成功的场合可以发动。从卡组将1张「VS／征服之魂」魔法陷阱卡加入手牌。②：自己或对手的回合，可以从以下选择1个，向对手展示那些属性的手牌的怪兽各1只发动。●暗：选对手场上的1只表侧表示怪兽，其攻击力、守备力下降500。●暗·地：使场上的守备力最低的1只怪兽返回持有者的手牌。
