--- a/data/cards/29302858.yaml
+++ b/data/cards/29302858.yaml
@@ -9,7 +9,7 @@ name:
   pt: Alma Aniquiladora Razen
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> ラゼン
   ja_romaji: Vankisshu Souru Razen
-  ko:
+  ko: VS 라젠
   ko_rr:
   zh-TW:
   zh-CN: 征服之魂 螺禅
@@ -46,7 +46,8 @@ text:
     Você só pode usar cada efeito de "Alma Aniquiladora Razen" uma vez por turno e não pode ativar mais que 1 na mesma Corrente.
   ja: |-
     このカード名の①②の効果は、それぞれ１ターンに１度しか使用できず、同一チェーン上では発動できない。①：このカードが召喚・特殊召喚に成功した場合に発動できる。デッキから戦士族以外の「ＶＳ」モンスター１体を手札に加える。②：自分・相手ターンに、以下から１つ選択し、その属性の手札のモンスターを１体ずつ相手に見せて発動できる。●炎：このターン、このカードは効果では破壊されない。●炎・闇：このカードと同じ縦列の他のモンスターを全て破壊する。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는, 각각 1턴에 1번밖에 사용할 수 없으며, 동일한 체인 위에서는 발동할 수 없다. ①: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우에 발동할 수 있다. 덱에서 전사족 이외의 "VS(뱅키시 소울)" 몬스터 1장을 패에 넣는다. ②: 자신 / 상대 턴에, 이하에서 1개 선택하여, 그 속성의 패의 몬스터를 1장씩 상대에게 보여주고 발동할 수 있다. ●화염: 이 턴에, 이 카드는 효과로는 파괴되지 않는다. ●화염 / 어둠: 이 카드와 같은 세로열인 다른 몬스터를 전부 파괴한다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果，1回合各能使用1次且同一连锁上不能发动。①：这张卡召唤或特殊召唤成功的场合可以发动。从卡组将1只战士族以外的「VS／征服之魂」怪兽加入手牌。②：自己或对手的回合，可以从以下选择1个，向对手展示那些属性的手牌的怪兽各1只发动。●炎：这个回合，这张卡不会被效果破坏。●炎·暗：将与这张卡相同纵列的其他的怪兽全部破坏。
