--- a/data/cards/30128445.yaml
+++ b/data/cards/30128445.yaml
@@ -9,7 +9,7 @@ name:
   pt: Transcendossauro Perfurygnathus
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>越<rt>えつ</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>ドリルグナトゥス
   ja_romaji: Chōetsuryū Dorirugunatusu
-  ko:
+  ko: 초월룡 드릴그나투스
   ko_rr:
   zh-TW:
   zh-CN: 超越竜ドリルグナトゥス
@@ -35,7 +35,9 @@ text:
   ja: |-
     レベル６モンスター×２
     このカード名の①③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードのＸ素材を１つ取り除き、除外されている自分の恐竜族モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。②：Ｘ素材が無いこのカードがモンスターとの戦闘で相手に与える戦闘ダメージは倍になる。③：このカードが破壊された場合に発動できる。自分の墓地から通常モンスター１体を選んでデッキに戻す。その後、このカードを特殊召喚できる。
-  ko:
+  ko: |-
+    레벨 6 몬스터 × 2
+    이 카드명의 ①③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 엑시즈 소재를 1개 제거하고, 제외되어 있는 자신의 공룡족 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 특수 소환한다. ②: 엑시즈 소재가 없는 이 카드가 몬스터와의 전투로 상대에게 주는 전투 데미지는 배가 된다. ③: 이 카드가 파괴되었을 경우에 발동할 수 있다. 자신 묘지에서 일반 몬스터 1장을 고르고 덱으로 되돌린다. 그 후, 이 카드를 특수 소환할 수 있다.
   zh-TW:
   zh-CN: |-
     等级6怪兽×2
