--- a/data/cards/40551410.yaml
+++ b/data/cards/40551410.yaml
@@ -9,7 +9,7 @@ name:
   pt: Recette de Personnel (Receita dos Funcionários)
   ja: <ruby>Ｒｅｃｅｔｔｅ ｄｅ Ｐｅｒｓｏｎｎｅｌ<rt>ルセット・ド・ペルソネル</rt></ruby>～<ruby>賄<rt>まかな</rt></ruby>いのレシピ～
   ja_romaji: Rusetto do Perusoneru ~ Makanai no Reshipi ~
-  ko:
+  ko: Recette de Personnel~스태프 식사 요리법~
   ko_rr:
   zh-TW:
   zh-CN: Recette de Personnel~膳食的食谱~
@@ -28,7 +28,8 @@ text:
     Você pode escolher 1 Monstro de Ritual que você controla; Invoque por Invocação-Especial 1 "Ficha de Nouvelles" (Demônio/TREVAS/Nível 1/ATK 50/DEF 50). O Nível desta Ficha se torna o mesmo que o desse monstro. Você pode enviar para o Cemitério este card com a face para cima da sua Zona de Magias & Armadilhas; Invoque por Invocação-Ritual 1 Monstro de Ritual "Nouvelles" da sua mão ao oferecer como Tributo monstros da sua mão ou do campo cuja soma dos Níveis seja exatamente igual ao Nível desse Monstro de Ritual. Você só pode usar cada efeito de "Recette de Personnel (Receita dos Funcionários)" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドの儀式モンスター１体を対象として発動できる。自分フィールドに「ヌーベルズトークン」（悪魔族・闇・星１・攻／守５０）１体を特殊召喚する。このトークンのレベルは、対象のモンスターと同じになる。②：魔法＆罠ゾーンの表側表示のこのカードを墓地へ送って発動できる。レベルの合計が儀式召喚するモンスターと同じになるように、自分の手札・フィールドのモンスターをリリースし、手札から「ヌーベルズ」儀式モンスター１体を儀式召喚する。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 의식 몬스터 1장을 대상으로 하고 발동할 수 있다. 자신 필드에 "누밸즈 토큰"(악마족 / 어둠 / 레벨 1 / 공 50 / 수 50) 1장을 특수 소환한다. 이 토큰의 레벨은, 대상 몬스터와 같아진다. ②: 마법 & 함정 존의 앞면 표시의 이 카드를 묘지로 보내고 발동할 수 있다. 레벨의 합계가 의식 소환할 몬스터와 같아지도록, 자신의 패 / 필드의 몬스터를 릴리스하고, 패에서 "누밸즈" 의식 몬스터 1장을 의식 소환한다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果1回合各能使用1次。①：可以以自己场上的1只仪式怪兽为对象发动。将1只「ヌーベルズトークン／新式魔餐衍生物」（恶魔族·暗·1星·攻/守0）特殊召唤到自己的场上。这只衍生物的等级变为与对象怪兽相同。②：可以将魔法陷阱区的表侧表示的这张卡送入墓地发动。使等级合计为要仪式召唤的怪兽的等级相同地，将自己的手牌或场上的怪兽解放，从手牌仪式召唤1只「ヌーベルズ／新式魔餐」仪式怪兽。
