--- a/data/cards/41773061.yaml
+++ b/data/cards/41773061.yaml
@@ -9,7 +9,7 @@ name:
   pt: Voici la Carte (Menu do Dia)
   ja: <ruby>Ｖｏｉｃｉ ｌａ Ｃａｒｔｅ<rt>ボワシ・ラ・カルト</rt></ruby>～メニューはこちら～
   ja_romaji: Bowashi Ra Karuto ~ Menyū wa Kochira ~
-  ko:
+  ko: Voici la Carte~메뉴는 이쪽에~
   ko_rr:
   zh-TW:
   zh-CN: Voici la Carte~请看菜单~
@@ -48,7 +48,10 @@ text:
     このカード名のカードは１ターンに１枚しか発動できない。①：デッキからカード名が異なる「ヌーベルズ」モンスター２体を相手に見せ、相手はその中から１体選ぶ。そのモンスター１体を自分の手札に加え、残りをデッキに戻す。その後、この効果で手札に加えたモンスターの種族によって以下のカード１枚を自分のデッキ・墓地から選んで手札に加える事ができる。
     ●獣戦士族：「Ｒｅｃｅｔｔｅ ｄｅ Ｐｏｉｓｓｏｎ～魚料理のレシピ～」
     ●戦士族：「Ｒｅｃｅｔｔｅ ｄｅ Ｖｉａｎｄｅ～肉料理のレシピ～」
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 덱에서 카드명이 다른 "누밸즈" 몬스터 2장을 상대에게 보여주고, 상대는 그 중에서 1장 고른다. 그 몬스터 1장을 자신의 패에 넣고, 나머지를 덱으로 되돌린다. 그 후, 이 효과로 패에 넣은 몬스터의 종족에 따라 이하의 카드 1장을 자신의 덱 / 묘지에서 고르고 패에 넣을 수 있다.
+    ●야수전사족: "Recette de Poisson(흐쎄트 드 쁘아쏭)~생선요리 요리법~"
+    ●전사족: "Recette de Viande(흐쎄트 드 비앙드)~고기요리 요리법~"
   zh-TW:
   zh-CN: |-
     这个卡名的卡1回合只能发动1张。①：从卡组向对手展示2只卡名不同的「ヌーベルズ／新式魔餐」怪兽，对手从那之中选1只。将那1只怪兽加入自己的手牌。剩下的返回卡组。那之后，可以根据用这个效果加入手牌的怪兽的种族从自己的卡组或墓地选以下的1张卡加入手牌。
