--- a/data/cards/53330789.yaml
+++ b/data/cards/53330789.yaml
@@ -9,7 +9,7 @@ name:
   pt: Explosão da Trindade da Alma Aniquiladora
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> トリニティ・バースト
   ja_romaji: Vankisshu Souru Toriniti Bāsuto
-  ko:
+  ko: VS 트리니티 버스트
   ko_rr:
   zh-TW:
   zh-CN: 征服之魂 三重爆裂
@@ -28,7 +28,8 @@ text:
     Escolha 1 monstro "Alma Aniquiladora" que você controla; Invoque por Invocação-Especial até 2 monstros "Alma Aniquiladora" da sua mão, com nomes diferentes um do outro, nenhum dos quais tenha o mesmo Atributo original que o do monstro alvo (mas negue seus efeitos e devolva-os para a mão durante a Fase Final) e, depois, você pode devolver para a mão todos os cards que seu oponente controla que estiverem na mesma coluna que a do monstro alvo que você controla e do(s) monstro(s) Invocado(s) por Invocação-Especial por este efeito. Você só pode ativar 1 "Explosão da Trindade da Alma Aniquiladora" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：自分フィールドの「ＶＳ」モンスター１体を対象として発動できる。そのモンスターとは元々の属性が異なる「ＶＳ」モンスターを２体まで手札から効果を無効にして特殊召喚する（同名カードは１枚まで）。その後、対象の自分のモンスター及びこの効果で特殊召喚したモンスターの、正面の相手フィールドのカードを全て持ち主の手札に戻す事ができる。この効果で特殊召喚したモンスターはエンドフェイズに持ち主の手札に戻る。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드의 "VS(뱅키시 소울)" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터와는 원래의 속성이 다른 "VS(뱅키시 소울)" 몬스터를 2장까지 패에서 효과를 무효로 하고 특수 소환한다(같은 이름의 카드는 1장까지). 그 후, 대상의 자신 몬스터 및 이 효과로 특수 소환한 몬스터의, 정면의 상대 필드의 카드를 전부 주인의 패로 되돌릴 수 있다. 이 효과로 특수 소환한 몬스터는 엔드 페이즈에 주인의 패로 되돌아간다.
   zh-TW:
   zh-CN: |-
     这个卡名的卡1回合只能发动1张。①：可以以自己场上的1只「VS／征服之魂」怪兽为对象发动。从手牌将最多2只与那只怪兽原属性不同的「VS／征服之魂」怪兽效果无效地特殊召唤（同名卡最多1张）。那之后，可以使作为对象的自己的怪兽以及用这个效果特殊召唤的怪兽的正对面的对手场上的卡全部返回持有者的手牌。用这个效果特殊召唤的怪兽在结束阶段返回持有者的手牌。
