--- a/data/cards/53618197.yaml
+++ b/data/cards/53618197.yaml
@@ -9,7 +9,7 @@ name:
   pt: Confiras de Nouvelles
   ja: コンフィラス・ド・ヌーベルズ
   ja_romaji: Konfirasu Do Nūberuzu
-  ko:
+  ko: 콩피라스 드 누밸즈
   ko_rr:
   zh-TW:
   zh-CN: 新式魔餐 油封肉佛拉士
@@ -28,7 +28,8 @@ text:
     Você pode Invocar este card por Invocação-Ritual com um card "Receita". Se este card for Invocado por Invocação-Especial: você pode escolher 1 Magia/Armadilha no campo; destrua-a. Quando um card ou efeito for ativado que escolha este card no campo como alvo, ou quando este card for alvo de um ataque (Efeito Rápido): você pode oferecer como Tributo este card e 1 monstro em Posição de Ataque em qualquer campo e, se isso acontecer, Invoque por Invocação-Especial 1 Monstro de Ritual "Nouvelles" de Nível 3 ou 4 da sua mão ou do Deck. Você só pode usar cada efeito de "Confiras de Nouvelles" uma vez por turno.
   ja: |-
     「レシピ」カードにより降臨。このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚に成功した場合、フィールドの魔法・罠カード１枚を対象として発動できる。そのカードを破壊する。②：フィールドのこのカードが攻撃・効果の対象になった時に発動できる。このカードと自分・相手フィールドの攻撃表示モンスター１体をリリースし、手札・デッキからレベル３・４の「ヌーベルズ」儀式モンスター１体を特殊召喚する。
-  ko:
+  ko: |-
+    "요리법" 카드에 의해 의식 소환. 이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 특수 소환에 성공했을 경우, 필드의 마법 / 함정 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 파괴한다. ②: 필드의 이 카드가 공격 / 효과의 대상이 되었을 때에 발동할 수 있다. 이 카드와 자신 / 상대 필드의 공격 표시 몬스터 1장을 릴리스하고, 패 / 덱에서 레벨 3 / 4 의 "누밸즈" 의식 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
     藉由「レシピ／食谱」卡降临。这个卡名的①②效果1回合各能使用1次。①：这张卡特殊召唤成功的场合，可以以场上的1张魔法陷阱卡为对象发动。将那张卡破坏。②：场上的这张卡成为攻击或效果的对象时可以发动。将这张卡和自己或对手场上的1只攻击表示怪兽解放，从手牌或卡组特殊召唤1只等级3或4的「ヌーベルズ／新式魔餐」仪式怪兽。
