--- a/data/cards/55688914.yaml
+++ b/data/cards/55688914.yaml
@@ -9,7 +9,7 @@ name:
   pt: Alma Aniquiladora Pluton HG
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> プルトン<ruby>Ｈ<rt>エイチ</rt></ruby><ruby>Ｇ<rt>ジー</rt></ruby>
   ja_romaji: Vankisshu Souru Puruton Eichi Jī
-  ko:
+  ko: VS 플루톤HG
   ko_rr:
   zh-TW:
   zh-CN: 征服之魂 软泥骷髅HG
@@ -46,7 +46,8 @@ text:
     Você só pode usar cada efeito de "Alma Aniquiladora Pluton HG" uma vez por turno e não pode ativar mais que 1 na mesma Corrente.
   ja: |-
     このカード名の①②の効果は、それぞれ１ターンに１度しか使用できず、同一チェーン上では発動できない。①：相手ターンに、自分のメインモンスターゾーンのモンスターが、存在しない場合または「ＶＳ」モンスターのみの場合に発動できる。このカードを手札から特殊召喚する。②：自分・相手ターンに、以下から１つ選択し、その属性の手札のモンスターを１体ずつ相手に見せて発動できる。●炎：このカードの守備力はターン終了時まで３０００アップする。●闇・地：このカードの攻撃力はターン終了時まで３０００アップする。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는, 각각 1턴에 1번밖에 사용할 수 없으며, 동일한 체인 위에서는 발동할 수 없다. ①: 상대 턴에, 자신 메인 몬스터 존의 몬스터가, 존재하지 않을 경우 또는 "VS(뱅키시 소울)" 몬스터뿐일 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 자신 / 상대 턴에, 이하에서 1개 선택하여, 그 속성의 패의 몬스터를 1장씩 상대에게 보여주고 발동할 수 있다. ●화염: 이 카드의 수비력은 턴 종료시까지 3000 올린다. ●어둠 / 땅: 이 카드의 공격력은 턴 종료시까지 3000 올린다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果，1回合各能使用1次且同一连锁上不能发动。①：对手的回合，自己的主要怪兽区没有怪兽存在，或者存在的怪兽只有「VS／征服之魂」怪兽的场合可以发动。将这张卡从手牌特殊召唤。②：自己或对手的回合，可以从以下选择1个，向对手展示那些属性的手牌的怪兽各1只发动。●炎：这张卡的守备力直到回合结束时上升3000。●暗·地：这张卡的攻击力直到回合结束时上升3000。
