--- a/data/cards/66401502.yaml
+++ b/data/cards/66401502.yaml
@@ -9,7 +9,7 @@ name:
   pt: Alma Aniquiladora Pantera
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> パンテラ
   ja_romaji: Vankisshu Souru Pantera
-  ko:
+  ko: VS 판테라
   ko_rr:
   zh-TW:
   zh-CN: 征服之魂 豹女
@@ -46,7 +46,8 @@ text:
     Você só pode usar cada efeito de "Alma Aniquiladora Pantera" uma vez por turno e não pode ativar mais que 1 na mesma Corrente.
   ja: |-
     このカード名の①②の効果は、それぞれ１ターンに１度しか使用できず、同一チェーン上では発動できない。①：自分のメインモンスターゾーンにモンスターが存在しない場合に発動できる。このカードを手札から特殊召喚する。②：自分・相手ターンに、以下から１つ選択し、その属性の手札のモンスターを１体ずつ相手に見せて発動できる。●地：このターン、このカードは戦闘では破壊されない。●地・炎：このカードと同じ縦列の魔法・罠カードを全て破壊する。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는, 각각 1턴에 1번밖에 사용할 수 없으며, 동일한 체인 위에서는 발동할 수 없다. ①: 자신 메인 몬스터 존에 몬스터가 존재하지 않을 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 자신 / 상대 턴에, 이하에서 1개 선택하여, 그 속성의 패의 몬스터를 1장씩 상대에게 보여주고 발동할 수 있다. ●땅: 이 턴에, 이 카드는 전투로는 파괴되지 않는다. ●땅 / 화염: 이 카드와 같은 세로열인 마법 / 함정 카드를 전부 파괴한다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果，1回合各能使用1次且同一连锁上不能发动。①：自己的主要怪兽区没有怪兽存在的场合可以发动。将这张卡从手牌特殊召唤。②：自己或对手的回合，可以从以下选择1个，向对手展示那些属性的手牌的怪兽各1只发动。●地：这个回合，这张卡不会被战斗破坏。●地·炎：将与这张卡相同纵列的魔法陷阱卡全部破坏。
