--- a/data/cards/67523044.yaml
+++ b/data/cards/67523044.yaml
@@ -9,7 +9,7 @@ name:
   pt: Marco Xeno
   ja: グラウンド・ゼノ
   ja_romaji: Guraundo Zeno
-  ko:
+  ko: 그라운드 제노
   ko_rr:
   zh-TW:
   zh-CN: 异度归零地
@@ -28,7 +28,8 @@ text:
     Adicione 1 Regulador Dinossauro ou Monstro Normal Dinossauro do seu Deck à sua mão e, depois, destrua 1 card na sua mão. Você pode banir este card do seu Cemitério; Invoque por Invocação-Fusão 1 Monstro de Fusão Dinossauro do seu Deck Adicional, usando monstros da sua mão ou do campo como matéria. Você só pode usar cada efeito de "Marco Xeno" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：デッキから恐竜族チューナーまたは恐竜族の通常モンスター１体を手札に加える。その後、自分の手札を１枚選んで破壊する。②：墓地のこのカードを除外して発動できる。自分の手札・フィールドから、恐竜族の融合モンスターカードによって決められた融合素材モンスターを墓地へ送り、その融合モンスター１体をＥＸデッキから融合召喚する。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 덱에서 공룡족 튜너 또는 공룡족 일반 몬스터 1장을 패에 넣는다. 그 후, 자신의 패를 1장 고르고 파괴한다. ②: 묘지의 이 카드를 제외하고 발동할 수 있다. 자신의 패 / 필드에서, 공룡족 융합 몬스터 카드에 기재된 융합 소재 몬스터를 묘지로 보내고, 그 융합 몬스터 1장을 엑스트라 덱에서 융합 소환한다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果1回合各能使用1次。①：从卡组将1只恐龙族调整或者恐龙族的通常怪兽加入手牌。那之后，选自己的1张手牌破坏。②：可以将墓地的这张卡除外发动。从自己的手牌或场上，将恐龙族的融合怪兽卡规定的融合素材怪兽送入墓地，从额外卡组融合召唤那1只融合怪兽。
