--- a/data/cards/67745632.yaml
+++ b/data/cards/67745632.yaml
@@ -9,7 +9,7 @@ name:
   pt: Transcendossauro Gigantozowler
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>越<rt>えつ</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>ギガントザウラー
   ja_romaji: Chōetsuryū Gigantozaurā
-  ko:
+  ko: 초월룡 기간트자우러
   ko_rr:
   zh-TW:
   zh-CN: 超越龙 巨大角龙
@@ -35,7 +35,9 @@ text:
   ja: |-
     恐竜族モンスター＋通常モンスター
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚に成功した場合、自分の墓地の恐竜族モンスター１体を対象として発動できる。そのモンスターを手札に加える。このカードが墓地から特殊召喚されていた場合、さらに自分の手札・フィールドのカード１枚と相手フィールドのカード１枚を選んで破壊できる。②：このカードが破壊された場合に発動できる。自分の墓地から通常モンスター１体を選んでデッキに戻す。その後、このカードを特殊召喚できる。
-  ko:
+  ko: |-
+    공룡족 몬스터 ＋ 일반 몬스터
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 특수 소환에 성공했을 경우, 자신 묘지의 공룡족 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 패에 넣는다. 이 카드가 묘지에서 특수 소환되어 있었을 경우, 추가로 자신의 패 / 필드의 카드 1장과 상대 필드의 카드 1장을 고르고 파괴할 수 있다. ②: 이 카드가 파괴되었을 경우에 발동할 수 있다. 자신 묘지에서 일반 몬스터 1장을 고르고 덱으로 되돌린다. 그 후, 이 카드를 특수 소환할 수 있다.
   zh-TW:
   zh-CN: |-
     恐龙族怪兽+通常怪兽
