--- a/data/cards/87778106.yaml
+++ b/data/cards/87778106.yaml
@@ -9,7 +9,7 @@ name:
   pt: Recette de Poisson (Receita de Peixe)
   ja: <ruby>Ｒｅｃｅｔｔｅ ｄｅ Ｐｏｉｓｓｏｎ<rt>ルセット・ド・ポワソン</rt></ruby>～<ruby>魚<rt>さかな</rt></ruby><ruby>料<rt>りょう</rt></ruby><ruby>理<rt>り</rt></ruby>のレシピ～
   ja_romaji: Rusetto Do Powason ~ Sakanaryōri no Reshipi ~
-  ko:
+  ko: Recette de Poisson~생선요리 요리법~
   ko_rr:
   zh-TW:
   zh-CN: Recette de Poisson~鱼料理的食谱~
@@ -35,7 +35,9 @@ text:
   ja: |-
     「ヌーベルズ」儀式モンスターの降臨に必要。①：レベルの合計が儀式召喚するモンスターのレベル以上になるように、自分の手札・フィールドのモンスターをリリースし、手札から「ヌーベルズ」儀式モンスター１体を儀式召喚する。この効果で「ブエリヤベース・ド・ヌーベルズ」を儀式召喚した場合、さらに以下の効果を適用できる。
     ●自分のデッキ・墓地から「Ｒｅｃｅｔｔｅ ｄｅ Ｐｏｉｓｓｏｎ～魚料理のレシピ～」以外の「レシピ」儀式魔法カード１枚を手札に加える。
-  ko:
+  ko: |-
+    "누밸즈" 의식 몬스터의 의식 소환에 필요. ①: 레벨의 합계가 의식 소환할 몬스터의 레벨 이상이 되도록, 자신의 패 / 필드의 몬스터를 릴리스하고, 패에서 "누밸즈" 의식 몬스터 1장을 의식 소환한다. 이 효과로 "부에리야베스 드 누밸즈"를 의식 소환했을 경우, 추가로 이하의 효과를 적용할 수 있다.
+    ●자신의 덱 / 묘지에서 "Recette de Poisson(흐쎄트 드 쁘아쏭)~생선요리 요리법~" 이외의 "요리법" 의식 마법 카드 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
     「ヌーベルズ／新式魔餐」仪式怪兽的降临所必须。①：使等级合计为要仪式召唤的怪兽的等级以上地，将自己的手牌或场上的怪兽解放，从手牌仪式召唤1只「ヌーベルズ／新式魔餐」仪式怪兽。用这个效果仪式召唤「ブエリヤベース・ド・ヌーベルズ／新式魔餐 炖鱼羹帕尔」的场合，可以再适用以下的效果。
