--- a/data/cards/87955518.yaml
+++ b/data/cards/87955518.yaml
@@ -9,7 +9,7 @@ name:
   pt: Receita Especial do Chef
   ja: <ruby>Ｒｅｃｅｔｔｅ ｄｅ Ｓｐéｃｉａｌｉｔé<rt>ルセット・ド・スペシャリテ</rt></ruby>～<ruby>料理長<rt>シェフ</rt></ruby><ruby>自<rt>じ</rt></ruby><ruby>慢<rt>まん</rt></ruby>のレシピ～
   ja_romaji: Rusetto Do Supesharite ~ Shefu Jiman no Reshipi ~
-  ko:
+  ko: Recette de Spécialité~셰프의 특제 요리법~
   ko_rr:
   zh-TW:
   zh-CN: Recette de Spécialité~主厨自豪的食谱~
@@ -28,7 +28,8 @@ text:
     Quando um Card de Magia/Armadilha, ou efeito de monstro, for ativado enquanto você controlar um Monstro de Ritual "Nouvelles": negue a ativação e, depois, você pode destruir esse card se você controlar um monstro que foi Invocado por Invocação-Especial pelo efeito de um monstro "Nouvelles". Se você Invocar por Invocação-Especial "Hambúrguer Esfomeado": você pode banir este card do seu Cemitério; ofereça como Tributo tantos monstros que seu oponente controla quanto possível. Você só pode usar cada efeito de "Receita Especial do Chef" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドに「ヌーベルズ」儀式モンスターが存在し、モンスターの効果・魔法・罠カードが発動した時に発動できる。その発動を無効にする。「ヌーベルズ」モンスターの効果で特殊召喚されたモンスターが自分フィールドに存在する場合、さらにその無効にしたカードを破壊できる。②：自分が「ハングリーバーガー」の特殊召喚に成功した場合、墓地のこのカードを除外して発動できる。相手フィールドのモンスターを可能な限りリリースする。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 "누밸즈" 의식 몬스터가 존재하고, 몬스터의 효과 / 마법 / 함정 카드가 발동했을 때에 발동할 수 있다. 그 발동을 무효로 한다. "누밸즈" 몬스터의 효과로 특수 소환된 몬스터가 자신 필드에 존재할 경우, 추가로 그 무효로 한 카드를 파괴할 수 있다. ②: 자신이 "헝그리 버거"의 특수 소환에 성공했을 경우, 묘지의 이 카드를 제외하고 발동할 수 있다. 상대 필드의 몬스터를 가능한 한 릴리스한다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果1回合各能使用1次。①：自己场上有「ヌーベルズ／新式魔餐」仪式怪兽存在，怪兽的效果或魔法陷阱卡发动时可以发动。使其发动无效。自己场上有用「ヌーベルズ／新式魔餐」怪兽的效果特殊召唤的怪兽存在的场合，可以再将那张无效的卡破坏。②：自己特殊召唤「ハングリーバーガー／饥饿的汉堡」成功的场合，可以将墓地的这张卡除外发动。将对手场上的怪兽尽可能多地解放。
