--- a/data/cards/88890658.yaml
+++ b/data/cards/88890658.yaml
@@ -9,7 +9,7 @@ name:
   pt: Baelgrill de Nouvelles
   ja: バグリエル・ド・ヌーベルズ
   ja_romaji: Bagurieru Do Nūberuzu
-  ko:
+  ko: 바그리엘 드 누밸즈
   ko_rr:
   zh-TW:
   zh-CN: 新式魔餐 烘烤巴力
@@ -28,7 +28,8 @@ text:
     Você pode Invocar este card por Invocação-Ritual com um card "Receita". Se este card for Invocado por Invocação-Especial: você pode negar os efeitos de todos os cards com a face para cima que seu oponente controla atualmente (até o final deste turno) e, depois, se este card foi Invocado por Invocação-Especial pelo efeito de um monstro "Nouvelles", você pode oferecer como Tributo tantos monstros que seu oponente controla quanto possível. (Efeito Rápido): você pode escolher 1 monstro em Posição de Ataque que seu oponente controla; ofereça-o como Tributo e, se isso acontecer, Invoque por Invocação-Especial 1 "Hambúrguer Esfomeado" da sua mão ou do Deck. Você só pode usar cada efeito de "Baelgrill de Nouvelles" uma vez por turno.
   ja: |-
     「レシピ」カードにより降臨。このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚に成功した場合に発動できる。相手フィールドの全ての表側表示のカードの効果をターン終了時まで無効にする。「ヌーベルズ」モンスターの効果で特殊召喚した場合、さらに相手フィールドのモンスターを可能な限りリリースする。②：自分・相手ターンに、相手フィールドの攻撃表示モンスター１体を対象として発動できる。そのモンスターをリリースし、手札・デッキから「ハングリーバーガー」１体を特殊召喚する。
-  ko:
+  ko: |-
+    "요리법" 카드에 의해 의식 소환. 이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 특수 소환에 성공했을 경우에 발동할 수 있다. 상대 필드의 모든 앞면 표시의 카드 효과를 턴 종료시까지 무효로 한다. "누밸즈" 몬스터의 효과로 특수 소환했을 경우, 추가로 상대 필드의 몬스터를 가능한 한 릴리스한다. ②: 자신 / 상대 턴에, 상대 필드의 공격 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 릴리스하고, 패 / 덱에서 "헝그리 버거" 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
     藉由「レシピ／食谱」卡降临。这个卡名的①②效果1回合各能使用1次。①：这张卡特殊召唤成功的场合可以发动。对手场上的全部表侧表示的卡的效果直到回合结束时无效。是用「ヌーベルズ／新式魔餐」怪兽的效果特殊召唤的场合，再将对手场上的怪兽尽可能多地解放。②：自己或对手的回合，可以以对手场上的1只攻击表示怪兽为对象发动。将那只怪兽解放，从手牌或卡组特殊召唤1只「ハングリーバーガー／饥饿的汉堡」。
