--- a/data/cards/89016236.yaml
+++ b/data/cards/89016236.yaml
@@ -9,7 +9,7 @@ name:
   pt: Poeltis de Nouvelles
   ja: ポワレティス・ド・ヌーベルズ
   ja_romaji: Powaretisu Do Nūberuzu
-  ko:
+  ko: 포와레티스 드 누밸즈
   ko_rr:
   zh-TW:
   zh-CN: 新式魔餐 闷煎布提斯
@@ -28,7 +28,8 @@ text:
     Você pode Invocar este card por Invocação-Ritual com um card "Receita". Se este card for Invocado por Invocação-Especial: você pode comprar 1 card. Quando um card ou efeito for ativado que escolha um monstro no campo como alvo, ou quando um monstro for alvo de um ataque (Efeito Rápido): você pode oferecer como Tributo 1 monstro "Nouvelles" que você controla e 1 monstro em Posição de Ataque em qualquer campo e, se isso acontecer, Invoque por Invocação-Especial 1 Monstro de Ritual "Nouvelles" de Nível 4 ou 5 da sua mão ou do Deck. Você só pode usar cada efeito de "Poeltis de Nouvelles" uma vez por turno.
   ja: |-
     「レシピ」カードにより降臨。このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚に成功した場合に発動できる。自分はデッキから１枚ドローする。②：フィールドのモンスターが攻撃・効果の対象になった時に発動できる。自分フィールドの「ヌーベルズ」モンスター１体と自分・相手フィールドの攻撃表示モンスター１体をリリースし、手札・デッキからレベル４・５の「ヌーベルズ」儀式モンスター１体を特殊召喚する。
-  ko:
+  ko: |-
+    "요리법" 카드에 의해 의식 소환. 이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 특수 소환에 성공했을 경우에 발동할 수 있다. 자신은 덱에서 1장 드로우한다. ②: 필드의 몬스터가 공격 / 효과의 대상이 되었을 때에 발동할 수 있다. 자신 필드의 "누밸즈" 몬스터 1장과 자신 / 상대 필드의 공격 표시 몬스터 1장을 릴리스하고, 패 / 덱에서 레벨 4 / 5 의 "누밸즈" 의식 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
     藉由「レシピ／食谱」卡降临。这个卡名的①②效果1回合各能使用1次。①：这张卡特殊召唤成功的场合可以发动。自己从卡组抽1张。②：场上的怪兽成为攻击或效果的对象时可以发动。将自己场上的1只「ヌーベルズ／新式魔餐」怪兽和自己或对手场上的1只攻击表示怪兽解放，从手牌或卡组特殊召唤1只等级4或5的「ヌーベルズ／新式魔餐」仪式怪兽。
