--- a/data/cards/91073013.yaml
+++ b/data/cards/91073013.yaml
@@ -9,7 +9,7 @@ name:
   pt: Alma Aniquiladora César Valius
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> <ruby>龍帝<rt>カイザー</rt></ruby>ヴァリウス
   ja_romaji: Vankisshu Souru Kaizā Variusu
-  ko:
+  ko: VS 카이저 바리우스
   ko_rr:
   zh-TW:
   zh-CN: 征服之魂 龙帝伐利乌斯
@@ -46,7 +46,8 @@ text:
     Você só pode usar cada efeito de "Alma Aniquiladora César Valius" uma vez por turno e não pode ativar mais que 1 na mesma Corrente.
   ja: |-
     このカード名の①②の効果は、それぞれ１ターンに１度しか使用できず、同一チェーン上では発動できない。①：自分・相手のメインフェイズに、ドラゴン族以外の自分フィールドの「ＶＳ」モンスター１体を対象として発動できる。そのモンスターを手札に戻し、このカードを手札から特殊召喚する。②：自分・相手ターンに、以下から１つ選択し、その属性の手札のモンスターを１体ずつ相手に見せて発動できる。●地：このターン、表側表示のこのカードは相手が発動した効果を受けない。●地・炎・闇：フィールドの他のカード１枚を選んで破壊する。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는, 각각 1턴에 1번밖에 사용할 수 없으며, 동일한 체인 위에서는 발동할 수 없다. ①: 자신 / 상대의 메인 페이즈에, 드래곤족 이외의 자신 필드의 "VS(뱅키시 소울)" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 패로 되돌리고, 이 카드를 패에서 특수 소환한다. ②: 자신 / 상대 턴에, 이하에서 1개 선택하여, 그 속성의 패의 몬스터를 1장씩 상대에게 보여주고 발동할 수 있다. ●땅: 이 턴에, 앞면 표시의 이 카드는 상대가 발동한 효과를 받지 않는다. ●땅 / 화염 / 어둠: 필드의 다른 카드 1장을 고르고 파괴한다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果，1回合各能使用1次且同一连锁上不能发动。①：自己或对手的主要阶段，可以以龙族以外的自己场上的1只「VS／征服之魂」怪兽为对象发动。使那只怪兽返回手牌，将这张卡从手牌特殊召唤。②：自己或对手的回合，可以从以下选择1个，向对手展示那些属性的手牌的怪兽各1只发动。●地：这个回合，表侧表示的这张卡不受对手发动的效果影响。●地·炎：选场上的1张其他的卡破坏。
