--- a/data/cards/91951471.yaml
+++ b/data/cards/91951471.yaml
@@ -9,7 +9,7 @@ name:
   pt: Redemoinho da Alma Aniquiladora
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> <ruby>螺旋流辻風<rt>ダストデビル</rt></ruby>
   ja_romaji: Vankisshu Souru Dasuto Debiru
-  ko:
+  ko: VS 더스트데블
   ko_rr:
   zh-TW:
   zh-CN: 征服之魂 螺旋流辻风
@@ -28,7 +28,8 @@ text:
     Escolha 1 monstro "Alma Aniquiladora" que você controla; mude sua posição de batalha e, depois, você pode colocar monstros com a face para cima que seu oponente controla com a face para baixo em Posição de Defesa, até o número de monstros "Alma Aniquiladora" que você controla com nomes diferentes. Você só pode ativar 1 "Redemoinho da Alma Aniquiladora" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：自分フィールドの「ＶＳ」モンスター１体を対象として発動できる。そのモンスターの表示形式を変更する。その後、自分フィールドの「ＶＳ」モンスターの種類の数まで、相手フィールドの表側表示モンスターを選んで裏側守備表示にできる。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드의 "VS(뱅키시 소울)" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 표시 형식을 변경한다. 그 후, 자신 필드의 "VS(뱅키시 소울)" 몬스터 종류의 수까지, 상대 필드의 앞면 표시 몬스터를 고르고 뒷면 수비 표시로 할 수 있다.
   zh-TW:
   zh-CN: |-
     这个卡名的卡1回合只能发动1张。①：可以以自己场上的1只「VS／征服之魂」怪兽为对象发动。变更那只怪兽的表示形式。那之后，可以选最多为自己场上的「VS／征服之魂」怪兽的种类的数量的对手场上的表侧表示怪兽变为里侧守备表示。
