--- a/data/cards/93918159.yaml
+++ b/data/cards/93918159.yaml
@@ -9,7 +9,7 @@ name:
   pt: Superascendente
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>越<rt>えつ</rt></ruby><ruby>天<rt>てん</rt></ruby><ruby>翔<rt>しょう</rt></ruby>
   ja_romaji: Chōetsu Tenshō
-  ko:
+  ko: 초월천상
   ko_rr:
   zh-TW:
   zh-CN: 超越天翔
@@ -28,7 +28,8 @@ text:
     Escolha 1 monstro Dinossauro que estiver banido ou em qualquer Cemitério; Invoque-o por Invocação-Especial no seu campo. Você só pode ativar 1 "Superascendente" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：お互いの墓地のモンスター及び除外されているモンスターの中から、恐竜族モンスター１体を対象として発動できる。そのモンスターを自分フィールドに特殊召喚する。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 서로의 묘지의 몬스터 및 제외되어 있는 몬스터 중에서, 공룡족 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 자신 필드에 특수 소환한다.
   zh-TW:
   zh-CN: |-
     这个卡名的卡1回合只能发动1张。①：可以从双方墓地的怪兽以及除外中的怪兽之中，以1只恐龙族怪兽为对象发动。将那只怪兽特殊召唤到自己的场上。
