--- a/data/cards/94130731.yaml
+++ b/data/cards/94130731.yaml
@@ -9,7 +9,7 @@ name:
   pt: Transcendossauro Glaciossauro
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>越<rt>えつ</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>グレイスザウルス
   ja_romaji: Chōetsuryū Gureisuzaurusu
-  ko:
+  ko: 초월룡 그레이스사우루스
   ko_rr:
   zh-TW:
   zh-CN: 超越龙 冰川恐龙
@@ -35,7 +35,9 @@ text:
   ja: |-
     チューナー＋チューナー以外のモンスター１体以上
     このカード名の③の効果は１ターンに１度しか使用できない。①：このカードは戦闘では破壊されない。②：このカードがモンスターゾーンに存在する限り、墓地から特殊召喚された自分フィールドの恐竜族モンスターは、相手の効果の対象にならず、相手の効果では破壊されない。③：このカードが破壊された場合に発動できる。自分の墓地から通常モンスター１体を選んでデッキに戻す。その後、このカードを特殊召喚できる。
-  ko:
+  ko: |-
+    튜너 ＋ 튜너 이외의 몬스터 1장 이상
+    이 카드명의 ③의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드는 전투로는 파괴되지 않는다. ②: 이 카드가 몬스터 존에 존재하는 한, 묘지에서 특수 소환된 자신 필드의 공룡족 몬스터는, 상대 효과의 대상이 되지 않으며, 상대 효과로는 파괴되지 않는다. ③: 이 카드가 파괴되었을 경우에 발동할 수 있다. 자신 묘지에서 일반 몬스터 1장을 고르고 덱으로 되돌린다. 그 후, 이 카드를 특수 소환할 수 있다.
   zh-TW:
   zh-CN: |-
     调整+1只以上调整以外的怪兽
