--- a/data/cards/kdb19130.yaml
+++ b/data/cards/kdb19130.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>幻<rt>げん</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>兵<rt>へい</rt></ruby>ハイ・カンコウ
-  ja_romaji: Genkaihei Hai Kankō
+  ja_romaji: Genkaihei Hai Kankou
   ko:
   ko_rr:
   zh-TW:
