--- a/rush.yaml
+++ b/rush.yaml
@@ -104471,7 +104471,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -104479,13 +104480,14 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card gains ATK equal to [the number of Level 10 or higher Sea Serpent Type monsters in your Graveyard] x 500. Then, if you have 3 or more Level 10 or higher Sea Serpent Type monsters in your Graveyard, this card cannot be destroyed by your opponent's card effects during their turn.
+    This card gains ATK equal to [the number of Level 10 or higher Sea Serpent Type monsters in your Graveyard] x 500. Also, if you have 3 or more Level 10 or higher Sea Serpent Type monsters in your Graveyard, this card cannot be destroyed by your opponent's card effects during their turn.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードの攻撃力は、［自分の墓地のモンスター（レベル１０以上／海竜族）の数］×５００アップする。自分の墓地にモンスター（レベル１０以上／海竜族）が３体以上いる場合、さらに相手ターンの間、このカードは相手の効果では破壊されない。
   ko:
   zh-TW:
   zh-CN:
@@ -104495,6 +104497,8 @@ attribute: DARK
 level: 8
 atk: 2500
 def: 2000
+series:
+- Abysslayer
 images:
 - index: 1
   image: AbysslayerLeviaknight-RDKP14-JP-OP.png
