--- a/data/cards/30243636.yaml
+++ b/data/cards/30243636.yaml
@@ -141,6 +141,11 @@ sets:
     set_name: Spell Ruler
     rarities:
     - Common
+  - set_number: DBWS-KR041
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
