--- a/data/cards/36042004.yaml
+++ b/data/cards/36042004.yaml
@@ -239,6 +239,11 @@ sets:
     set_name: "Structure Deck R: Tyranno's Rage"
     rarities:
     - Normal Parallel Rare
+  - set_number: DBWS-KR013
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
