--- a/data/cards/54562327.yaml
+++ b/data/cards/54562327.yaml
@@ -74,6 +74,11 @@ sets:
     set_name: 'Deck Build Pack: Wild Survivors'
     rarities:
     - Super Rare
+  ko:
+  - set_number: DBWS-KR023
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
+    - Super Rare
   zh-CN:
   - set_number: DUNE-SC112
     set_name: Duelist Nexus
