--- a/data/cards/57103969.yaml
+++ b/data/cards/57103969.yaml
@@ -298,6 +298,11 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: DBWS-KR028
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
+    - Common
+    - Normal Parallel Rare
   zh-TW:
   - set_number: CBLZ-TC059
     set_name: Cosmo Blazer
