--- a/data/cards/80701178.yaml
+++ b/data/cards/80701178.yaml
@@ -145,6 +145,11 @@ sets:
     set_name: Cybernetic Horizon
     rarities:
     - Rare
+  - set_number: DBWS-KR044
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
+    - Common
+    - Normal Parallel Rare
   zh-CN:
   - set_number: MGP2-SC065
     set_name: Mega Pack 02
