--- a/data/cards/05852388.yaml
+++ b/data/cards/05852388.yaml
@@ -78,6 +78,11 @@ sets:
     set_name: 'Deck Build Pack: Wild Survivors'
     rarities:
     - Super Rare
+  ko:
+  - set_number: DBWS-KR001
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
