--- a/data/cards/06631034.yaml
+++ b/data/cards/06631034.yaml
@@ -185,6 +185,11 @@ sets:
     set_name: Precious Pack Volume 2
     rarities:
     - Rare
+  - set_number: DBWS-KR008
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
