--- a/data/cards/18511599.yaml
+++ b/data/cards/18511599.yaml
@@ -118,6 +118,11 @@ sets:
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: DBWS-KR015
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
