--- a/data/cards/18940556.yaml
+++ b/data/cards/18940556.yaml
@@ -138,6 +138,11 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  - set_number: DBWS-KR009
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
