--- a/data/cards/28168628.yaml
+++ b/data/cards/28168628.yaml
@@ -102,6 +102,12 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  ko:
+  - set_number: DBWS-KR022
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
