--- a/data/cards/29302858.yaml
+++ b/data/cards/29302858.yaml
@@ -98,6 +98,11 @@ sets:
     set_name: 'Deck Build Pack: Wild Survivors'
     rarities:
     - Super Rare
+  ko:
+  - set_number: DBWS-KR016
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
