--- a/data/cards/31241087.yaml
+++ b/data/cards/31241087.yaml
@@ -76,6 +76,12 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  ko:
+  - set_number: DBWS-KR002
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
+    - Ultra Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
