--- a/data/cards/38572779.yaml
+++ b/data/cards/38572779.yaml
@@ -175,6 +175,11 @@ sets:
     set_name: "Structure Deck R: Tyranno's Rage"
     rarities:
     - Normal Parallel Rare
+  - set_number: DBWS-KR011
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Limited
   ocg: Unlimited
