--- a/data/cards/41773061.yaml
+++ b/data/cards/41773061.yaml
@@ -93,6 +93,11 @@ sets:
     set_name: 'Deck Build Pack: Wild Survivors'
     rarities:
     - Super Rare
+  ko:
+  - set_number: DBWS-KR036
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
