--- a/data/cards/44335251.yaml
+++ b/data/cards/44335251.yaml
@@ -132,6 +132,11 @@ sets:
     set_name: "Structure Deck R: Tyranno's Rage"
     rarities:
     - Super Rare
+  - set_number: DBWS-KR012
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
