--- a/data/cards/53303460.yaml
+++ b/data/cards/53303460.yaml
@@ -125,6 +125,11 @@ sets:
     set_name: Cybernetic Horizon
     rarities:
     - Rare
+  - set_number: DBWS-KR043
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
+    - Common
+    - Normal Parallel Rare
   zh-CN:
   - set_number: MGP2-SC064
     set_name: Mega Pack 02
