--- a/data/cards/53330789.yaml
+++ b/data/cards/53330789.yaml
@@ -71,6 +71,11 @@ sets:
     set_name: 'Deck Build Pack: Wild Survivors'
     rarities:
     - Super Rare
+  ko:
+  - set_number: DBWS-KR026
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
