--- a/data/cards/67523044.yaml
+++ b/data/cards/67523044.yaml
@@ -69,6 +69,11 @@ sets:
     set_name: 'Deck Build Pack: Wild Survivors'
     rarities:
     - Super Rare
+  ko:
+  - set_number: DBWS-KR006
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
+    - Super Rare
   zh-CN:
   - set_number: DUNE-SC111
     set_name: Duelist Nexus
