--- a/data/cards/67745632.yaml
+++ b/data/cards/67745632.yaml
@@ -85,6 +85,11 @@ sets:
     set_name: 'Deck Build Pack: Wild Survivors'
     rarities:
     - Super Rare
+  ko:
+  - set_number: DBWS-KR003
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
