--- a/data/cards/80280944.yaml
+++ b/data/cards/80280944.yaml
@@ -123,6 +123,11 @@ sets:
     set_name: Collectors Pack 2017
     rarities:
     - Common
+  - set_number: DBWS-KR010
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
