--- a/data/cards/80811661.yaml
+++ b/data/cards/80811661.yaml
@@ -133,6 +133,11 @@ sets:
     set_name: Spell Ruler
     rarities:
     - Common
+  - set_number: DBWS-KR042
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
