--- a/data/cards/82946847.yaml
+++ b/data/cards/82946847.yaml
@@ -103,6 +103,11 @@ sets:
     set_name: "Structure Deck R: Tyranno's Rage"
     rarities:
     - Ultra Rare
+  - set_number: DBWS-KR014
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
