--- a/data/cards/87955518.yaml
+++ b/data/cards/87955518.yaml
@@ -77,6 +77,12 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  ko:
+  - set_number: DBWS-KR040
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
