--- a/data/cards/91073013.yaml
+++ b/data/cards/91073013.yaml
@@ -99,6 +99,12 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  ko:
+  - set_number: DBWS-KR021
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
+    - Ultra Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
