--- a/data/cards/28279543.yaml
+++ b/data/cards/28279543.yaml
@@ -32,7 +32,7 @@ text:
     사악한 드래곤. 어둠의 힘을 사용한 공격은 강력하다.
   zh-TW:
   zh-CN: |-
-    邪恶的龙。使用暗之力的攻击很强力。
+    邪恶的龙。其使用暗黑力量的攻击强而有力。
 card_type: Monster
 monster_type_line: Dragon / Normal
 attribute: DARK
@@ -270,6 +270,11 @@ sets:
     - Common
   - set_number: 15AY-KRA07
     set_name: 'Memories of the Duel King: Duelist Kingdom Arc'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL01-SC003
+    set_name: Classic Pack 01
     rarities:
     - Common
 limit_regulation:
