--- a/data/cards/76792184.yaml
+++ b/data/cards/76792184.yaml
@@ -32,7 +32,7 @@ text:
     "매지션 오브 블랙 카오스"의 의식 소환에 필요. ①: 자신의 패 / 필드에서, 레벨의 합계가 8 이상이 되도록 몬스터를 릴리스하고, 패에서 "매지션 오브 블랙 카오스"를 의식 소환한다.
   zh-TW:
   zh-CN: |-
-    「黑混沌之魔术师」的降临必需。必须从自己的手卡·场上把等级合计直到8以上的怪兽解放。
+    “黑混沌之魔导”降临所必须。①：为使合计等级为8以上，解放自己手牌・场上的怪兽，从手牌将“黑混沌之魔导”仪式召唤。
 card_type: Spell
 property: Ritual
 series:
@@ -40,10 +40,10 @@ series:
 images:
 - index: 1
   image: BlackMagicRitual-15AY-JP-C-RP.png
-  illustration: BlackMagicRitual-TF04-JP-VG.jpg
+  illustration: BlackMagicRitual-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: BlackMagicRitual-SBTK-EN-C-1E.png
-  illustration: BlackMagicRitual-TF04-EN-VG.jpg
+  illustration: BlackMagicRitual-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: PP01-EN002
@@ -155,6 +155,11 @@ sets:
     - Common
   - set_number: 15AY-KRC32
     set_name: 'Memories of the Duel King: Ceremonial Battle Arc'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL01-SC015
+    set_name: Classic Pack 01
     rarities:
     - Common
 limit_regulation:
