--- a/data/cards/02314238.yaml
+++ b/data/cards/02314238.yaml
@@ -32,7 +32,7 @@ text:
     ①: 자신 필드에 "블랙 매지션"이 존재할 경우에 발동할 수 있다. 상대 필드의 마법 / 함정 카드를 전부 파괴한다.
   zh-TW:
   zh-CN: |-
-    ①：自己场上有「黑魔术师」存在的场合才能发动。对方场上的魔法·陷阱卡全部破坏。
+    ①：自己场上有“黑魔导”存在的情况下可以发动。将对手场上的魔法・陷阱卡全部破坏。
 card_type: Spell
 property: Normal
 series:
@@ -314,6 +314,11 @@ sets:
     set_name: 'Memories of the Duel King: Ceremonial Battle Arc'
     rarities:
     - Ultra Rare
+  zh-CN:
+  - set_number: CL01-SC017
+    set_name: Classic Pack 01
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
