--- a/data/cards/26577155.yaml
+++ b/data/cards/26577155.yaml
@@ -85,7 +85,7 @@ sets:
   - set_number: CL01-SC109
     set_name: Classic Pack 01
     rarities:
-    - Common
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
