--- a/data/cards/96729612.yaml
+++ b/data/cards/96729612.yaml
@@ -249,6 +249,10 @@ sets:
     set_name: Entry Pack Volume 6
     rarities:
     - Common
+  - set_number: TM02-SC090
+    set_name: 'Theme Pack: Undead Rondo'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
