--- a/data/cards/28126717.yaml
+++ b/data/cards/28126717.yaml
@@ -12,7 +12,7 @@ name:
   ko: 후완다리즈와 의문의 지도
   ko_rr: Huwandarijeu-wa Uimun-ui Jido
   zh-TW:
-  zh-CN: 轻风游鸟与谜之地图
+  zh-CN: 随风飘飘游与谜之地图
 text:
   en: |-
     During your Main Phase: You can reveal 1 Level 1 "Floowandereeze" monster in your hand and banish 1 "Floowandereeze" card with a different name from your Deck, then, immediately after this effect resolves, Normal Summon the revealed monster. If your opponent Normal Summons a monster: Immediately after this effect resolves, you can Normal Summon 1 "Floowandereeze" monster. You can only use each effect of "Floowandereeze and the Magnificent Map" once per turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 메인 페이즈에 발동할 수 있다. 패에서 레벨 1 의 "후완다리즈" 몬스터 1장을 상대에게 보여주고, 보여준 몬스터와는 카드명이 다른 "후완다리즈" 카드 1장을 덱에서 제외한다. 그 후, 보여준 몬스터를 일반 소환한다. ②: 상대가 몬스터의 일반 소환에 성공했을 경우에 발동할 수 있다. 자신은 "후완다리즈" 몬스터 1장을 일반 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②效果1回合各能使用1次。①：自己的主要阶段可以发动。从手牌向对手展示1只等级1的「ふわんだりぃず／轻风游鸟」怪兽，从卡组将1张与展示的怪兽卡名不同的「ふわんだりぃず／轻风游鸟」卡除外。那之后，召唤展示过的怪兽。②：对手召唤怪兽成功的场合可以发动。自己召唤1只「ふわんだりぃず／轻风游鸟」怪兽。
+    此卡名的①②效果１回合仅可各使用１次。①：在自己的主要阶段可以发动。从手牌将１只等级１“随风飘飘游”怪兽向对手出示，将卡名与所出示怪兽不同的１张“随风飘飘游”卡从牌组除外。然后，召唤所出示的怪兽。②：对手召唤怪兽成功的情况下可以发动。自己召唤１只“随风飘飘游”怪兽。
 card_type: Spell
 property: Field
 series:
@@ -96,6 +96,11 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Rare
+  zh-CN:
+  - set_number: MGP6-SC151
+    set_name: Mega Pack 06
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Limited
