--- a/data/cards/23232295.yaml
+++ b/data/cards/23232295.yaml
@@ -110,6 +110,10 @@ sets:
     set_name: Lord of the Tachyon Galaxy
     rarities:
     - Common
+  - set_number: 23TP-JP301
+    set_name: Tournament Pack 2023 Vol.3
+    rarities:
+    - Super Rare
   ko:
   - set_number: LTGY-KR050
     set_name: Lord of the Tachyon Galaxy
