--- a/data/cards/06850209.yaml
+++ b/data/cards/06850209.yaml
@@ -45,10 +45,10 @@ series:
 images:
 - index: 1
   image: ADealwithDarkRuler-EE1-JP-C.jpg
-  illustration: ADealwithDarkRuler-TF04-JP-VG.jpg
+  illustration: ADealwithDarkRuler-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: ADealwithDarkRuler-DCR-EN-C-UE-25thAnniversaryEdition.png
-  illustration: ADealwithDarkRuler-TF04-EN-VG.jpg
+  illustration: ADealwithDarkRuler-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: DR1-EN192
