--- a/data/cards/43378048.yaml
+++ b/data/cards/43378048.yaml
@@ -8,7 +8,7 @@ name:
   it: Armityle il Fantasma del Chaos
   pt: Armityle, o Fantasma do Caos
   ja: <ruby>混<rt>こん</rt></ruby><ruby>沌<rt>とん</rt></ruby><ruby>幻<rt>げん</rt></ruby><ruby>魔<rt>ま</rt></ruby>アーミタイル
-  ja_romaji: Konton Genma Āmitairu
+  ja_romaji: Kontongenma Āmitairu
   ko: 혼돈환마 아미타일
   ko_rr: Hondonhwangma Amitail
   zh-TW:
