--- a/data/cards/60110982.yaml
+++ b/data/cards/60110982.yaml
@@ -8,7 +8,7 @@ name:
   it: Armityle il Fantasma del Chaos - Fantasma del Furore
   pt: Armityle, o Fantasma do Caos - Fantasma da Fúria
   ja: <ruby>混<rt>こん</rt></ruby><ruby>沌<rt>とん</rt></ruby><ruby>幻<rt>げん</rt></ruby><ruby>魔<rt>ま</rt></ruby>アーミタイル－<ruby>虚<rt>きょ</rt></ruby><ruby>無<rt>む</rt></ruby><ruby>幻<rt>げん</rt></ruby><ruby>影<rt>えい</rt></ruby><ruby>羅<rt>ら</rt></ruby><ruby>生<rt>しょう</rt></ruby><ruby>悶<rt>もん</rt></ruby>
-  ja_romaji: Konton Genma Āmitairu - Kyomu Gen'ei Rashōmon
+  ja_romaji: Kontongenma Āmitairu - Kyomu Gen'ei Rashōmon
   ko: 혼돈환마 아미타일－허무환영라쇼몽
   ko_rr:
   zh-TW:
