--- a/data/cards/40352445.yaml
+++ b/data/cards/40352445.yaml
@@ -12,7 +12,7 @@ name:
   ko: 드래그마의 알버스 나이트
   ko_rr: Deuraegeuma-ui Albeoseu Naiteu
   zh-TW:
-  zh-CN: 凶导的白骑士
+  zh-CN: 凶教导之白骑士
 text:
   en: |-
     You can Ritual Summon this card with "Dogmatikalamity". You cannot Special Summon monsters from the Extra Deck. If your opponent activates a card or effect (except during the Damage Step): You can send 1 monster from your Extra Deck to the GY, and if you do, look at your opponent's Extra Deck and send 1 monster from it to the GY. This card gains ATK equal to half the combined ATK of those monsters sent to the GY, until the end of this turn. You can only use this effect of "White Knight of Dogmatika" once per turn.
@@ -32,9 +32,7 @@ text:
     "드래그마타"에 의해 의식 소환. 이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 몬스터 존에 존재하는 한, 자신은 엑스트라 덱에서 몬스터를 특수 소환할 수 없다. ②: 상대가 마법 / 함정 / 몬스터의 효과를 발동했을 경우에 발동할 수 있다. 자신의 엑스트라 덱에서 몬스터 1장을 묘지로 보내고, 상대의 엑스트라 덱을 확인하여, 그 중의 몬스터 1장을 고르고 묘지로 보낸다. 이 카드의 공격력은 턴 종료시까지, 묘지로 보낸 몬스터의 공격력을 합계한 수치의 절반만큼 올린다.
   zh-TW:
   zh-CN: |-
-    「凶导的福音」降临。这个卡名的②的效果1回合只能使用1次。
-    ①：只要这张卡在怪兽区域存在，自己不能从额外卡组把怪兽特殊召唤。
-    ②：对方把魔法·陷阱·怪兽的效果发动的场合才能发动。从自己的额外卡组把1只怪兽送去墓地，把对方的额外卡组确认，选那之内的1只怪兽送去墓地。这张卡的攻击力直到回合结束时上升送去墓地的怪兽的攻击力合计数值的一半。
+    以“凶教导之福音”降临。此卡名的②效果１回合仅可使用１次。①：只要此卡存在于怪兽区域，自己不可从额外牌组特殊召唤怪兽。②：对手发动魔法・陷阱・怪兽的效果的情况下可以发动。从自己的额外牌组将１只怪兽送至墓地，确认对手的额外牌组，挑选其中１只怪兽送至墓地。此卡的攻击力直至回合结束时为止，上升相当于送至墓地的怪兽攻击力的合计数值一半的数值。
 card_type: Monster
 monster_type_line: Spellcaster / Ritual / Effect
 attribute: LIGHT
@@ -117,6 +115,11 @@ sets:
     rarities:
     - Super Rare
     - Prismatic Secret Rare
+  zh-CN:
+  - set_number: MGP6-SC020
+    set_name: Mega Pack 06
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
