--- a/rush.yaml
+++ b/rush.yaml
@@ -104909,3 +104909,60 @@ sets:
     - Secret Rare
     - Over Rush Rare
 yugipedia_page_id: 991219
+---
+konami_id:
+name:
+  en: Jointech Hero
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ジョインテック・ヒーロー
+  ja_romaji: Jointekku Hīrō
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card by Tributing "Jointech Ace", send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card gains 1500 ATK until the end of this turn. Then, you can add 1 EARTH Attribute Machine Type monster from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Effect
+attribute: EARTH
+level: 7
+atk: 2500
+def: 1500
+series:
+- Jointech
+images:
+- index: 1
+  image: JointechHero-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP008
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Rare
+yugipedia_page_id: 991608
