--- a/data/cards/99284890.yaml
+++ b/data/cards/99284890.yaml
@@ -44,10 +44,10 @@ series:
 images:
 - index: 1
   image: AvatarofThePot-EE2-JP-C.jpg
-  illustration: AvatarofThePot-TF04-JP-VG.jpg
+  illustration: AvatarofThePot-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: AvatarofThePot-DR2-EN-C-UE.png
-  illustration: AvatarofThePot-TF04-EN-VG.jpg
+  illustration: AvatarofThePot-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: DR2-EN128
