--- a/data/rush/18769.yaml
+++ b/data/rush/18769.yaml
@@ -44,6 +44,8 @@ attribute: DARK
 level: 7
 atk: 2500
 def: 1500
+series:
+- Abysslayer
 images:
 - index: 1
   image: AbysslayerApsaras-RDVSP1-JP-SR.png
