--- a/data/rush/18770.yaml
+++ b/data/rush/18770.yaml
@@ -44,6 +44,8 @@ attribute: DARK
 level: 5
 atk: 1500
 def: 1000
+series:
+- Abysslayer
 images:
 - index: 1
   image: AbysslayerMakara-RDVSP1-JP-C.png
