--- a/data/rush/18772.yaml
+++ b/data/rush/18772.yaml
@@ -44,6 +44,8 @@ attribute: DARK
 level: 3
 atk: 1000
 def: 400
+series:
+- Abysslayer
 images:
 - index: 1
   image: AbysslayerVodyanoy-RDVSP1-JP-C.png
