--- a/data/cards/89112729.yaml
+++ b/data/cards/89112729.yaml
@@ -55,10 +55,10 @@ materials: '"Blast Juggler" + "Two-Headed King Rex"'
 images:
 - index: 1
   image: CyberSaurus-MRD-EU-C-UE.png
-  illustration: CyberSaurus-TF04-JP-VG.jpg
+  illustration: CyberSaurus-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: CyberSaurus-MRD-EN-C-UE-25thAnniversaryEdition.png
-  illustration: CyberSaurus-TF04-EN-VG.jpg
+  illustration: CyberSaurus-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: MRD-EN105
