--- a/data/rush/yugipedia991219.yaml
+++ b/data/rush/yugipedia991219.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    ３００ＬＰを払って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（レベル４／攻撃力１６００以下）またはレジェンド通常モンスター１体を選び、自分フィールドに表側表示で特殊召喚する。この効果で「レジェンド・マジシャン」またはレジェンド通常モンスターを特殊召喚した場合、さらに相手フィールドの魔法・罠カード１枚を選んで破壊できる。
   ko:
   zh-TW:
   zh-CN:
