--- a/data/rush/yugipedia991608.yaml
+++ b/data/rush/yugipedia991608.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「ジョインテック・エース」をリリースしてこのカードを召喚したターンに、デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードの攻撃力はターン終了時まで１５００アップする。その後、自分の墓地のモンスター（地属性／機械族）１体を選んで手札に加える事ができる。
   ko:
   zh-TW:
   zh-CN:
