--- a/data/rush/yugipedia991611.yaml
+++ b/data/rush/yugipedia991611.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の表側表示モンスター（地属性／機械族）が攻撃を受ける相手モンスターの攻撃宣言時に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    攻撃を受けるモンスターはその戦闘では破壊されない。自分フィールドに表側表示モンスター（レベル７以上／地属性／機械族）がいる場合、さらに攻撃してきたモンスターを破壊する。
   ko:
   zh-TW:
   zh-CN:
