--- a/data/rush/yugipedia991613.yaml
+++ b/data/rush/yugipedia991613.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（レベル７／地属性／機械族）１体を選び、手札に加えるか自分フィールドに表側表示で特殊召喚する。この効果で「ジョインテック・ヒーロー」を選んだ場合、さらに自分の墓地の「ジョインテック・エース」１体を選んで手札に加える事ができる。
   ko:
   zh-TW:
   zh-CN:
@@ -50,7 +52,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「ジョインテック・エース」＋「ジョインテック・エース」
   ko:
   zh-TW:
   zh-CN:
