--- a/rush.yaml
+++ b/rush.yaml
@@ -104887,7 +104887,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    ３００ＬＰを払って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -104899,7 +104900,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（レベル４／攻撃力１６００以下）またはレジェンド通常モンスター１体を選び、自分フィールドに表側表示で特殊召喚する。この効果で「レジェンド・マジシャン」またはレジェンド通常モンスターを特殊召喚した場合、さらに相手フィールドの魔法・罠カード１枚を選んで破壊できる。
   ko:
   zh-TW:
   zh-CN:
@@ -104940,7 +104942,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「ジョインテック・エース」をリリースしてこのカードを召喚したターンに、デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -104952,7 +104955,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードの攻撃力はターン終了時まで１５００アップする。その後、自分の墓地のモンスター（地属性／機械族）１体を選んで手札に加える事ができる。
   ko:
   zh-TW:
   zh-CN:
@@ -104997,7 +105001,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の表側表示モンスター（地属性／機械族）が攻撃を受ける相手モンスターの攻撃宣言時に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -105009,7 +105014,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    攻撃を受けるモンスターはその戦闘では破壊されない。自分フィールドに表側表示モンスター（レベル７以上／地属性／機械族）がいる場合、さらに攻撃してきたモンスターを破壊する。
   ko:
   zh-TW:
   zh-CN:
@@ -105050,7 +105056,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -105062,7 +105069,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（レベル７／地属性／機械族）１体を選び、手札に加えるか自分フィールドに表側表示で特殊召喚する。この効果で「ジョインテック・ヒーロー」を選んだ場合、さらに自分の墓地の「ジョインテック・エース」１体を選んで手札に加える事ができる。
   ko:
   zh-TW:
   zh-CN:
@@ -105080,7 +105088,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「ジョインテック・エース」＋「ジョインテック・エース」
   ko:
   zh-TW:
   zh-CN:
