--- a/data/rush/19116.yaml
+++ b/data/rush/19116.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19116
 name:
   en: Boton the Music Princess
   de:
@@ -20,7 +20,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    合奏武隊の纏め役。軽快な棒さばきで個性豊かな仲間を指揮する。メガネを指摘されると拗ねる。
   ko:
   zh-TW:
   zh-CN:
@@ -34,7 +35,7 @@ series:
 - Music Princess
 images:
 - index: 1
-  image: BotontheMusicPrincess-RDTB01-JP-OP.png
+  image: BotontheMusicPrincess-RDTB01-JP-NPR.png
 sets:
   ja:
   - set_number: RD/TB01-JP031
