--- a/data/rush/19130.yaml
+++ b/data/rush/19130.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19130
 name:
   en: Demolition Soldier High Kanko
   de:
@@ -7,7 +7,7 @@ name:
   it:
   pt:
   ja: <ruby>幻<rt>げん</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>兵<rt>へい</rt></ruby>ハイ・カンコウ
-  ja_romaji: Genkaihei Hai Kankō
+  ja_romaji: Genkaihei Hai Kankou
   ko:
   ko_rr:
   zh-TW:
@@ -20,7 +20,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    信念を貫く幻壊兵。理想郷への道を求め、破壊と創造を繰り返す。
   ko:
   zh-TW:
   zh-CN:
@@ -34,7 +35,7 @@ series:
 - Demolition
 images:
 - index: 1
-  image: DemolitionSoldierHighKanko-RDTB01-JP-OP.png
+  image: DemolitionSoldierHighKanko-RDTB01-JP-C.png
 sets:
   ja:
   - set_number: RD/TB01-JP048
