--- a/rush.yaml
+++ b/rush.yaml
@@ -102549,6 +102549,52 @@ sets:
     - Normal Parallel Rare
 yugipedia_page_id: 937020
 ---
+konami_id: 19116
+name:
+  en: Boton the Music Princess
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>揮<rt>き</rt></ruby><ruby>楽<rt>がっ</rt></ruby><ruby>姫<rt>き</rt></ruby>コンタクト
+  ja_romaji: Kigakki Kontakuto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    The mediator of the band. She conducts her unique and colorful group of friends with her nimble polemanship. She sulks and pouts when people point out her glasses.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    合奏武隊の纏め役。軽快な棒さばきで個性豊かな仲間を指揮する。メガネを指摘されると拗ねる。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Normal
+attribute: WIND
+level: 1
+atk: 0
+def: 500
+series:
+- Music Princess
+images:
+- index: 1
+  image: BotontheMusicPrincess-RDTB01-JP-NPR.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP031
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Normal Parallel Rare
+yugipedia_page_id: 937021
+---
 konami_id: 19117
 name:
   en: Music Princess's Dance
@@ -103295,6 +103341,52 @@ sets:
     - Common
 yugipedia_page_id: 980619
 ---
+konami_id: 19130
+name:
+  en: Demolition Soldier High Kanko
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>幻<rt>げん</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>兵<rt>へい</rt></ruby>ハイ・カンコウ
+  ja_romaji: Genkaihei Hai Kankou
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    A Demolition Soldier who stands by his convictions. Searching the road to his ideal utopia, he engages in endless construction and demolition.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    信念を貫く幻壊兵。理想郷への道を求め、破壊と創造を繰り返す。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Wyrm / Normal
+attribute: FIRE
+level: 4
+atk: 1200
+def: 1500
+series:
+- Demolition
+images:
+- index: 1
+  image: DemolitionSoldierHighKanko-RDTB01-JP-C.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP048
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Common
+yugipedia_page_id: 980620
+---
 konami_id: 19131
 name:
   en: Demolition Sword Constructedea
@@ -103788,51 +103880,6 @@ yugipedia_page_id: 986105
 ---
 konami_id:
 name:
-  en: Boton the Music Princess
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: <ruby>揮<rt>き</rt></ruby><ruby>楽<rt>がっ</rt></ruby><ruby>姫<rt>き</rt></ruby>コンタクト
-  ja_romaji: Kigakki Kontakuto
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-text:
-  en: |-
-    The mediator of the band. She conducts her unique and colorful group of friends with her nimble polemanship. She sulks and pouts when people point out her glasses.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Warrior / Normal
-attribute: WIND
-level: 1
-atk: 0
-def: 500
-series:
-- Music Princess
-images:
-- index: 1
-  image: BotontheMusicPrincess-RDTB01-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/TB01-JP031
-    set_name: 'Triple Build Pack: Godbreath Wing'
-    rarities:
-    - Normal Parallel Rare
-yugipedia_page_id: 937021
----
-konami_id:
-name:
   en: Thestalos the Firestorm Monarch
   de:
   es:
@@ -104320,51 +104367,6 @@ sets:
     - ScR
     - ORR
 yugipedia_page_id: 975311
----
-konami_id:
-name:
-  en: Demolition Soldier High Kanko
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: <ruby>幻<rt>げん</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>兵<rt>へい</rt></ruby>ハイ・カンコウ
-  ja_romaji: Genkaihei Hai Kankō
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-text:
-  en: |-
-    A Demolition Soldier who stands by his convictions. Searching the road to his ideal utopia, he engages in endless construction and demolition.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Wyrm / Normal
-attribute: FIRE
-level: 4
-atk: 1200
-def: 1500
-series:
-- Demolition
-images:
-- index: 1
-  image: DemolitionSoldierHighKanko-RDTB01-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/TB01-JP048
-    set_name: 'Triple Build Pack: Godbreath Wing'
-    rarities:
-    - Common
-yugipedia_page_id: 980620
 ---
 konami_id:
 name:
