--- a/data/cards/23232295.yaml
+++ b/data/cards/23232295.yaml
@@ -33,8 +33,8 @@ text:
     2 monstros "Boxeador Obstinado" de Nível 4
     Se um ou mais monstros "Boxeador Obstinado" que você controla seriam destruídos em batalha ou por um efeito de card, você pode desassociar 1 Matéria Xyz deste card em vez de destruir 1 desses monstros. Quando uma ou mais Matérias Xyz forem desassociados deste card: este card ganha 800 de ATK.
   ja: |-
-    「ＢＫ」と名のついたレベル４モンスター×２
-    自分フィールド上の「ＢＫ」と名のついたモンスターが戦闘またはカードの効果によって破壊される場合、その破壊されるモンスター１体の代わりにこのカードのエクシーズ素材を１つ取り除く事ができる。また、このカードのエクシーズ素材が取り除かれた時、このカードの攻撃力は８００ポイントアップする。
+    レベル４「ＢＫ」モンスター×２
+    ①：自分フィールドの「ＢＫ」モンスターが戦闘・効果で破壊される場合、その「ＢＫ」モンスターの内の１体の代わりにこのカードのＸ素材を１つ取り除く事ができる。②：このカードのＸ素材が取り除かれた場合に発動する。このカードの攻撃力は８００アップする。
   ko: |-
     "BK(버닝나쿠라)"라는 이름이 붙은 레벨 4 몬스터 × 2
     자신 필드 위의 "BK(버닝나쿠라)"라는 이름이 붙은 몬스터가 전투 또는 카드의 효과에 의해서 파괴될 경우, 그 파괴되는 몬스터 1장 대신에 이 카드의 엑시즈 소재를 1개 제거할 수 있다. 또한, 이 카드의 엑시즈 소재가 제거되었을 때, 이 카드의 공격력은 800 포인트 올린다.
