--- a/data/cards/52035300.yaml
+++ b/data/cards/52035300.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Enquanto este card estiver com a face para cima no campo, ele não pode ser oferecido como Tributo, exceto para a Invocação-Tributo de um monstro do Tipo Guerreiro. Durante sua Fase de Apoio, se este card estiver no seu Cemitério e todos os monstros no seu Cemitério forem do Tipo Guerreiro: você pode Invocar este card por Invocação-Especial. Além disso, você não pode controlar nenhum monstro para ativar e resolver este efeito.
   ja: |-
-    自分のスタンバイフェイズ時にこのカードが墓地に存在し、自分フィールド上にモンスターが存在しない場合、このカードを墓地から特殊召喚できる。この効果は自分の墓地に戦士族以外のモンスターが存在する場合には発動できない。このカードは戦士族モンスターのアドバンス召喚以外のためにはリリースできない。
+    ①：このカードはモンスターゾーンに存在する限り、戦士族モンスターのアドバンス召喚以外のためにはリリースできない。②：自分スタンバイフェイズにこのカードが墓地に存在し、自分の墓地に戦士族モンスター以外のモンスターが存在しない場合に発動できる。このカードを特殊召喚する。この効果は自分フィールドにモンスターが存在しない場合に発動と処理ができる。
   ko: |-
     이 카드는 전사족 몬스터의 제물 소환 이외의 제물로는 할 수 없다. 자신의 스텐바이 페이즈시에 이 카드가 묘지에 존재하고, 자신 필드 위에 몬스터 카드가 존재하지 않을 경우, 이 카드를 자신 필드 위에 특수 소환할 수 있다. 이 효과는 자신의 묘지에 전사족 이외의 몬스터가 존재할 경우에는 발동할 수 없다.
   zh-TW:
