--- a/data/cards/58601383.yaml
+++ b/data/cards/58601383.yaml
@@ -31,8 +31,8 @@ text:
     Questa carta non può essere bersagliata o distrutta dagli effetti dei Mostri con Effetto.
   pt:
   ja: |-
-    「大地の騎士ガイアナイト」＋効果モンスター以外のシンクロモンスター
-    このカードは効果モンスターの効果の対象にならず、効果モンスターの効果では破壊されない。
+    「大地の騎士ガイアナイト」＋効果モンスター以外のＳモンスター
+    ①：このカードがモンスターゾーンに存在する限り、このカードはモンスターの効果では破壊されず、お互いはこのカードをモンスターの効果の対象にできない。
   ko: |-
     "대지의 기사 가이아 나이트" ＋ 효과 몬스터 이외의 싱크로 몬스터
     이 카드는 효과 몬스터의 효과의 대상이 되지 않으며, 효과 몬스터의 효과로는 파괴되지 않는다.
