--- a/data/cards/95492061.yaml
+++ b/data/cards/95492061.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Quando este card for Invocado por Invocação-Normal ou Virar: você pode adicionar 1 Monstro de Ritual ou 1 Magia de Ritual do seu Deck à sua mão.
   ja: |-
-    ①：このカードが召喚・反転召喚に成功した時に発動できる。デッキから儀式モンスター１体または儀式魔法カード１枚を手札に加える。
+    ①：このカードが召喚・反転召喚した時に発動できる。デッキから儀式モンスター１体か儀式魔法カード１枚を手札に加える。
   ko: |-
     ①: 이 카드가 일반 소환 / 반전 소환에 성공했을 때에 발동할 수 있다. 덱에서 의식 몬스터 1장 또는 의식 마법 카드 1장을 패에 넣는다.
   zh-TW:
