--- a/data/rush/15216.yaml
+++ b/data/rush/15216.yaml
@@ -49,6 +49,10 @@ sets:
     set_name: Strongest Battle Deck Gavin - Demon Commander Three Legions
     rarities:
     - Common
+  - set_number: RD/B232-JP007
+    set_name: Battle Pack 2023 Vol.2
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP01-KR012
     set_name: 'Deck Mod Pack: Hyperspeed Rush Road!!'
