--- a/data/rush/17346.yaml
+++ b/data/rush/17346.yaml
@@ -55,4 +55,8 @@ sets:
     set_name: Saikyō Jump March 2022 promotional card
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/B232-JP009
+    set_name: Battle Pack 2023 Vol.2
+    rarities:
+    - Common
 yugipedia_page_id: 717324
