--- a/data/rush/18613.yaml
+++ b/data/rush/18613.yaml
@@ -71,6 +71,11 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Common
+  - set_number: RD/B232-JP005
+    set_name: Battle Pack 2023 Vol.2
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/KP12-KR031
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
