--- a/data/rush/18715.yaml
+++ b/data/rush/18715.yaml
@@ -55,6 +55,11 @@ sets:
     set_name: Legend Awakening Pack
     rarities:
     - Common
+  - set_number: RD/B232-JP003
+    set_name: Battle Pack 2023 Vol.2
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/LGP1-KR040
     set_name: Legend Awakening Pack
