--- a/data/rush/19269.yaml
+++ b/data/rush/19269.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19269
 name:
   en: Three Cavalteers
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地にモンスター（レベル７以上）が３体以上いる場合、相手モンスター（レベル７以上）の攻撃宣言時に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    攻撃してきたモンスターの攻撃力はターン終了時まで１０００ダウンする。
   ko:
   zh-TW:
   zh-CN:
