--- a/data/cards/00402568.yaml
+++ b/data/cards/00402568.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Este card pode atacar diretamente seu oponente. Se este card causar dano de batalha ao seu oponente em um ataque direto: seu oponente não pode ativar cards ou efeitos até o final deste turno.
   ja: |-
-    このカードは相手プレイヤーに直接攻撃する事ができる。このカードが直接攻撃によって相手ライフに戦闘ダメージを与えた時、相手はこのターンのエンドフェイズ時まで魔法・罠・効果モンスターの効果を発動する事ができない。
+    ①：このカードは直接攻撃できる。②：このカードが直接攻撃で相手に戦闘ダメージを与えた場合に発動する。このターン、相手は魔法・罠・モンスターの効果を発動できない。
   ko: |-
     이 카드는 상대 플레이어에게 직접 공격할 수 있다. 이 카드가 직접 공격에 의해서 상대 라이프에 전투 데미지를 주었을 때, 상대는 이 턴의 엔드 페이즈시까지 마법/함정/효과 몬스터의 효과를 발동할 수 없다.
   zh-TW:
