--- a/data/cards/12289247.yaml
+++ b/data/cards/12289247.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Se um ou mais cards que você controla forem destruídos em batalha ou por um efeito de card: você pode Invocar este card por Invocação-Especial da sua mão e, depois, você pode Invocar por Invocação-Especial 1 monstro da sua mão. Você pode banir este card que você controla, mais 4 monstros da sua mão, do campo e/ou do Cemitério (1 de cada com "Dragão Pêndulo", "Dragão Xyz", "Dragão Sincro" e "Dragão Fusão" em seus nomes); Invoque por Invocação-Especial 1 "Rei Supremo Z-ARC" do seu Deck Adicional. (Esta é considerada uma Invocação-Fusão.)
   ja: |-
-    ①：自分フィールドのカードが戦闘・効果で破壊された場合に発動できる。このカードを手札から特殊召喚する。その後、手札からモンスター１体を特殊召喚できる。②：フィールドのこのカードを除外し、自分の手札・フィールド・墓地から、「ペンデュラム・ドラゴン」「エクシーズ・ドラゴン」「シンクロ・ドラゴン」「フュージョン・ドラゴン」モンスターを１体ずつ除外して発動できる。「覇王龍ズァーク」１体を融合召喚扱いとしてエクストラデッキから特殊召喚する。
+    ①：自分フィールドのカードが戦闘・効果で破壊された場合に発動できる。このカードを手札から特殊召喚する。その後、手札からモンスター１体を特殊召喚できる。②：自分の手札・フィールド・墓地の、「ペンデュラム・ドラゴン」「エクシーズ・ドラゴン」「シンクロ・ドラゴン」「フュージョン・ドラゴン」モンスター１体ずつと、フィールドのこのカードを除外して発動できる。「覇王龍ズァーク」１体を融合召喚扱いでＥＸデッキから特殊召喚する。
   ko: |-
     ①: 자신 필드의 카드가 전투 / 효과로 파괴되었을 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. 그 후, 패에서 몬스터 1장을 특수 소환할 수 있다. ②: 필드의 이 카드를 제외하고, 자신의 패 / 필드 / 묘지에서, "펜듈럼 드래곤" "엑시즈 드래곤" "싱크로 드래곤" "퓨전 드래곤" 몬스터를 1장씩 제외하여 발동할 수 있다. "패왕룡 즈아크" 1장을 융합 소환으로 취급하고 엑스트라 덱에서 특수 소환한다.
   zh-TW:
@@ -54,7 +54,7 @@ pendulum_effect:
   pt: |-
     Durante sua Fase Principal: você pode destruir este card e, se isso acontecer, pegue 1 "Mago Observador do Tempo" da sua mão ou do Deck e coloque-o na sua Zona de Pêndulo ou Invoque-o por Invocação-Especial. Você só pode usar este efeito de "Feiticeiro Cronógrafo" uma vez por turno.
   ja: |-
-    「クロノグラフ・マジシャン」のＰ効果は１ターンに１度しか使用できない。①：自分メインフェイズに発動できる。このカードを破壊し、手札・デッキから「時読みの魔術師」１体を選び、自分のＰゾーンに置くか特殊召喚する。
+    このカード名のＰ効果は１ターンに１度しか使用できない。①：自分メインフェイズに発動できる。このカードを破壊し、手札・デッキから「時読みの魔術師」１体を選び、自分のＰゾーンに置くか特殊召喚する。
   ko: |-
     "크로노그래프 매지션"의 펜듈럼 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 메인 페이즈에 발동할 수 있다. 이 카드를 파괴하고, 패 / 덱에서 "시간을 읽는 마술사" 1장을 골라, 자신의 펜듈럼 존에 놓거나 특수 소환한다.
   zh-TW:
