--- a/data/cards/24050692.yaml
+++ b/data/cards/24050692.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Envie 1 monstro Réptil do seu Deck para o Cemitério e, depois, se você tiver 5 ou mais monstros Réptil com nomes diferentes no seu Cemitério, você pode Invocar por Invocação-Especial 1 monstro Réptil do seu Cemitério. Você só pode ativar 1 "Nenúfar Ogdoádico" por turno.
   ja: |-
-    このカード名のカードは１ターンに１枚しか発動できない。①：デッキから爬虫類族モンスター１体を墓地へ送る。その後、自分の墓地に爬虫類族モンスターが５種類以上存在する場合、自分の墓地から爬虫類族モンスター１体を選んで特殊召喚できる。
+    このカード名のカードは１ターンに１枚しか発動できない。①：デッキから爬虫類族モンスター１体を墓地へ送る。その後、自分の墓地に爬虫類族モンスターが５種類以上存在する場合、自分の墓地から爬虫類族モンスター１体を特殊召喚できる。
   ko: |-
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 덱에서 파충류족 몬스터 1장을 묘지로 보낸다. 그 후, 자신 묘지에 파충류족 몬스터가 5종류 이상 존재할 경우, 자신 묘지에서 파충류족 몬스터 1장을 고르고 특수 소환할 수 있다.
   zh-TW:
