--- a/data/cards/29765339.yaml
+++ b/data/cards/29765339.yaml
@@ -31,8 +31,8 @@ text:
     Questa carta può attaccare il tuo avversario direttamente. Quando questa carta infligge danno da combattimento al tuo avversario con un attacco diretto, scegli 1 carta nel tuo Deck e rimuovila dal gioco. Aggiungi quella carta alla tua mano durante la tua 2a Standby Phase dopo l'attivazione di questo effetto.
   pt:
   ja: |-
-    「エレキ」と名のついたチューナー＋チューナー以外の雷族モンスター１体以上
-    このカードは相手プレイヤーに直接攻撃する事ができる。このカードが直接攻撃によって相手ライフに戦闘ダメージを与えた時、自分のデッキからカードを１枚選択してゲームから除外する。発動後２回目の自分のスタンバイフェイズ時にそのカードを手札に加える。
+    「エレキ」チューナー＋チューナー以外の雷族モンスター１体以上
+    ①：このカードは直接攻撃できる。②：このカードが直接攻撃で相手に戦闘ダメージを与えた場合に発動する。デッキからカード１枚を選んで除外する。発動後２回目の自分スタンバイフェイズに、この効果で除外したカードを手札に加える。
   ko: |-
     "일렉"이라는 이름이 붙은 튜너 ＋ 튜너 이외의 번개족 몬스터 1장 이상
     이 카드는 상대 플레이어에게 직접 공격할 수 있다. 이 카드가 직접 공격에 의해서 상대 라이프에 전투 데미지를 주었을 때, 자신의 덱에서 카드를 1장 선택하고 게임에서 제외한다. 발동 후, 2번째 자신의 스텐바이 페이즈시에 그 카드를 패에 넣는다.
