--- a/data/cards/37261776.yaml
+++ b/data/cards/37261776.yaml
@@ -33,15 +33,15 @@ text:
     1 monstro "Salamagrande" + 1 Monstro Link
     Se este card for Invocado por Invocação-Fusão: até o final deste turno, você pode fazer com que este card ganhe ATK igual à metade do ATK original combinado das matérias usadas para Invocá-lo. Uma vez por batalha, durante o cálculo de dano, se este monstro batalhar um monstro cujo ATK atual seja diferente do seu ATK original (Efeito Rápido): você pode dobrar o ATK deste card, apenas durante o cálculo de dano. Se este card que foi Invocado por Invocação-Fusão usando "Salamagrande Quimera Violeta" como matéria batalhar um monstro, o ATK desse monstro se torna 0 apenas durante o cálculo de dano.
   ja: |-
-    「サラマングレイト」モンスター＋リンクモンスター
-    ①：このカードが融合召喚に成功した場合に発動できる。このカードの攻撃力はターン終了時まで、素材としたモンスターの元々の攻撃力を合計した数値の半分だけアップする。②：このカードが元々の攻撃力と異なる攻撃力を持つモンスターと戦闘を行うダメージ計算時に１度、発動できる。このカードの攻撃力はそのダメージ計算時のみ倍になる。③：「転生炎獣ヴァイオレットキマイラ」を素材として融合召喚したこのカードと戦闘を行うモンスターの攻撃力はダメージ計算時のみ０になる。
+    「サラマングレイト」モンスター＋Ｌモンスター
+    ①：このカードが融合召喚した場合に発動できる。このカードの攻撃力はターン終了時まで、このカードの融合素材としたモンスターの元々の攻撃力を合計した数値の半分アップする。②：このカードが元々の攻撃力と異なる攻撃力を持つモンスターと戦闘を行うダメージ計算時に１度、発動できる。このカードの攻撃力はそのダメージ計算時のみ倍になる。③：「転生炎獣ヴァイオレットキマイラ」を素材として融合召喚したこのカードと戦闘を行うモンスターの攻撃力はダメージ計算時のみ０になる。
   ko: |-
     "샐러맨그레이트" 몬스터 ＋ 링크 몬스터
     ①: 이 카드가 융합 소환에 성공했을 경우에 발동할 수 있다. 이 카드의 공격력은 턴 종료시까지, 소재로 한 몬스터의 원래 공격력을 합계한 수치의 절반만큼 올린다. ②: 이 카드가 원래 공격력과 다른 공격력을 가지는 몬스터와 전투를 실행하는 데미지 계산시에 1번, 발동할 수 있다. 이 카드의 공격력은 그 데미지 계산시에만 배가 된다. ③: "샐러맨그레이트 바이올렛키메라"를 소재로서 융합 소환한 이 카드와 전투를 실행하는 몬스터의 공격력은 데미지 계산시에만 0 이 된다.
   zh-TW:
   zh-CN: |-
-    "转生炎兽"怪兽＋连接怪兽
-    ①：此卡融合召唤成功的情况下可以发动。此卡的攻击力直至回合结束时为止，上升相当于作为素材的怪兽的原本攻击力合计数值一半的数值。②：每次此卡与拥有和原本攻击力不同的攻击力的怪兽进行战斗的伤害计算时可以发动1次。此卡的攻击力仅在该伤害计算时变为两倍。③：与以"转生炎兽 堇色客迈拉"作为素材融合召唤的此卡进行战斗的怪兽的攻击力仅在伤害计算时变为0。
+    “转生炎兽”怪兽＋连接怪兽
+    ①：此卡融合召唤成功的情况下可以发动。此卡的攻击力直至回合结束时为止，上升相当于作为素材的怪兽的原本攻击力合计数值一半的数值。②：每次此卡与拥有和原本攻击力不同的攻击力的怪兽进行战斗的伤害计算时可以发动1次。此卡的攻击力仅在该伤害计算时变为两倍。③：与以“转生炎兽 堇色客迈拉”作为素材融合召唤的此卡进行战斗的怪兽的攻击力仅在伤害计算时变为0。
 card_type: Monster
 monster_type_line: Cyberse / Fusion / Effect
 attribute: FIRE
