--- a/data/cards/38120068.yaml
+++ b/data/cards/38120068.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Descarte 1 monstro de Nível 8; compre 2 cards.
   ja: |-
-    ①：手札からレベル８モンスター１体を捨てて発動できる。自分はデッキから２枚ドローする。
+    ①：手札からレベル８モンスター１体を捨てて発動できる。自分は２枚ドローする。
   ko: |-
     ①: 패에서 레벨 8 몬스터 1장을 버리고 발동할 수 있다. 자신은 덱에서 2장 드로우한다.
   zh-TW: |-
