--- a/data/cards/42052439.yaml
+++ b/data/cards/42052439.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Se você controlar um monstro Guerreiro: você pode Invocar este card por Invocação-Especial da sua mão. Você pode enviar este card do campo para o Cemitério; Invoque por Invocação-Especial 1 monstro Guerreiro de Nível 4 ou menos da sua mão e, se isso acontecer, seu oponente não pode escolhê-lo como alvo de efeitos de card neste turno. Você só pode usar cada efeito de "Dama Pederneira de Fogo" uma vez por turno.
   ja: |-
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドに戦士族モンスターが存在する場合に発動できる。このカードを手札から特殊召喚する。②：フィールドのこのカードを墓地へ送って発動できる。手札からレベル４以下の戦士族モンスター１体を特殊召喚する。この効果で特殊召喚したモンスターは、このターン相手の効果の対象にならない。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドに戦士族モンスターが存在する場合に発動できる。このカードを手札から特殊召喚する。②：フィールドのこのカードを墓地へ送って発動できる。手札からレベル４以下の戦士族モンスター１体を特殊召喚する。このターン、相手はこの効果で特殊召喚したモンスターを効果の対象にできない。
   ko: |-
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 전사족 몬스터가 존재할 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 필드의 이 카드를 묘지로 보내고 발동할 수 있다. 패에서 레벨 4 이하의 전사족 몬스터 1장을 특수 소환한다. 이 효과로 특수 소환한 몬스터는, 이 턴에 상대 효과의 대상이 되지 않는다.
   zh-TW:
