--- a/data/cards/46947713.yaml
+++ b/data/cards/46947713.yaml
@@ -34,7 +34,7 @@ text:
     Enquanto este card estiver co-linkado, ele e seus monstros co-linkados ganham 500 de ATK e, além disso, seu oponente não pode escolher nenhum deles como alvo de efeitos de card. Você pode escolher 1 Monstro Link Ciberso de Link-3 ou menos no seu Cemitério, exceto "Transcodificar Transmissor"; Invoque-o por Invocação-Especial em uma zona sua para a qual este card apontar. Você não pode Invocar monstros por Invocação-Especial no turno em que ativar este efeito, exceto monstros Ciberso. Você só pode usar este efeito de "Transcodificar Transmissor" uma vez por turno.
   ja: |-
     効果モンスター２体以上
-    このカード名の②の効果は１ターンに１度しか使用できない。①：このカードが相互リンク状態の場合、このカード及びこのカードの相互リンク先のモンスターの攻撃力は５００アップし、相手の効果の対象にならない。②：「トランスコード・トーカー」以外の自分の墓地のリンク３以下のサイバース族リンクモンスター１体を対象として発動できる。そのモンスターをこのカードのリンク先となる自分フィールドに特殊召喚する。この効果を発動するターン、自分はサイバース族モンスターしか特殊召喚できない。
+    このカード名の②の効果は１ターンに１度しか使用できない。①：このカードが相互リンク状態の場合、このカード及びこのカードの相互リンク先のモンスターの攻撃力は５００アップし、相手はそれらを効果の対象にできない。②：「トランスコード・トーカー」を除く、自分の墓地のリンク３以下のサイバース族Ｌモンスター１体を対象として発動できる（この効果を発動するターン、自分はサイバース族モンスターしか特殊召喚できない）。そのモンスターをこのカードのリンク先となる自分フィールドに特殊召喚する。
   ko: |-
     효과 몬스터 2장 이상
     이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 상호 링크 상태일 경우, 이 카드 및 이 카드의 상호 링크 앞의 몬스터의 공격력은 500 올리고, 상대 효과의 대상이 되지 않는다. ②: "트랜스코드 토커" 이외의 자신 묘지의 링크 3 이하의 사이버스족 링크 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 이 카드의 링크 앞이 되는 자신 필드에 특수 소환한다. 이 효과를 발동하는 턴에, 자신은 사이버스족 몬스터밖에 특수 소환할 수 없다.
