--- a/data/cards/58058134.yaml
+++ b/data/cards/58058134.yaml
@@ -34,7 +34,7 @@ text:
     Uma vez por turno, este card não pode ser destruído em batalha. Durante o turno de qualquer duelista, quando um card ou efeito for ativado e escolher este card com a face para cima como alvo: você pode desassociar 1 Matéria Xyz deste card; negue a ativação e, se isso acontecer, destrua o card.
   ja: |-
     レベル１モンスター×２
-    このカードは１ターンに１度だけ戦闘では破壊されない。また、このカードを対象とする魔法・罠・効果モンスターの効果が発動した時、このカードのエクシーズ素材を１つ取り除いて発動できる。その発動を無効にし破壊する。
+    ①：このカードは１ターンに１度だけ戦闘では破壊されない。②：フィールドのこのカードを対象とする魔法・罠・モンスターの効果が発動した時、このカードのＸ素材を１つ取り除いて発動できる。その発動を無効にし破壊する。
   ko: |-
     레벨 1 몬스터 × 2
     이 카드는 1턴에 1번만 전투로는 파괴되지 않는다. 또한, 이 카드를 대상으로 하는 마법 / 함정 / 효과 몬스터의 효과가 발동했을 때, 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 그 발동을 무효로 하고 파괴한다.
