--- a/data/rush/17721.yaml
+++ b/data/rush/17721.yaml
@@ -51,6 +51,12 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Rare
+  - set_number: RD/B232-JP001
+    set_name: Battle Pack 2023 Vol.2
+    rarities:
+    - Common
+    - Super Rare
+    - Ultra Rare
   ko:
   - set_number: RD/MRP1-KR096
     set_name: Megaroad Pack
