--- a/data/rush/18701.yaml
+++ b/data/rush/18701.yaml
@@ -47,12 +47,18 @@ series:
 images:
 - index: 1
   image: DragonTribeFusion-RDLGP1-JP-R.png
+- index: 2
+  image: DragonTribeFusion-RDS23P-JP-OP.png
 sets:
   ja:
   - set_number: RD/LGP1-JP024
     set_name: Legend Awakening Pack
     rarities:
     - Rare
+  - set_number: RD/S23P-JP004
+    set_name: Tournament Battle July 2023 prize card
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/LGP1-KR024
     set_name: Legend Awakening Pack
