--- a/data/rush/19268.yaml
+++ b/data/rush/19268.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19268
 name:
   en: Gravity Plus Dragon
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札１枚を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの表側表示モンスター１体を選び、その攻撃力をターン終了時まで、［自分フィールドの表側表示の通常モンスター（ドラゴン族）の数］×４００アップする。
   ko:
   zh-TW:
   zh-CN:
