--- a/data/cards/26268488.yaml
+++ b/data/cards/26268488.yaml
@@ -102,7 +102,7 @@ sets:
     rarities:
     - Ultra Rare
   ja:
-  - set_number: VP15-JPA03
+  - set_number: VP15-JP003
     set_name: 20th Legendary Collection
     rarities:
     - Secret Rare
