--- a/data/cards/52653092.yaml
+++ b/data/cards/52653092.yaml
@@ -90,7 +90,7 @@ sets:
     rarities:
     - Super Rare
   ja:
-  - set_number: VP15-JPA04
+  - set_number: VP15-JP004
     set_name: 20th Legendary Collection
     rarities:
     - Secret Rare
