--- a/data/cards/89870349.yaml
+++ b/data/cards/89870349.yaml
@@ -96,7 +96,7 @@ sets:
     rarities:
     - Rare
   ja:
-  - set_number: VP15-JPA02
+  - set_number: VP15-JP002
     set_name: 20th Legendary Collection
     rarities:
     - Secret Rare
