--- a/data/cards/40619825.yaml
+++ b/data/cards/40619825.yaml
@@ -46,10 +46,10 @@ series:
 images:
 - index: 1
   image: AxeofDespair-LART-EN-UR-LE.png
-  illustration: AxeofDespair-TF04-JP-VG.jpg
+  illustration: AxeofDespair-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: AxeofDespair-SRL-EN-UR-UE-25thAnniversaryEdition.png
-  illustration: AxeofDespair-TF04-EN-VG.jpg
+  illustration: AxeofDespair-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: SYE-035
