--- a/rush.yaml
+++ b/rush.yaml
@@ -104072,6 +104072,63 @@ sets:
     - Common
 yugipedia_page_id: 990307
 ---
+konami_id: 19270
+name:
+  en: Defrostrooper
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: デフロストルーパー
+  ja_romaji: Defurosutorūpā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    このカードを召喚したターンに発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send the top 2 cards of your opponent's Deck to the Graveyard. Then, if your opponent has 5 or more Spell/Trap Cards in their Graveyard, you can add 1 Equip Spell Card from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    相手のデッキの上からカード２枚を墓地へ送る。その後、相手の墓地の魔法・罠カードが５枚以上の場合、自分の墓地の装備魔法カード１枚を選んで手札に加える事ができる。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Cyberse / Effect
+attribute: FIRE
+level: 3
+atk: 1200
+def: 100
+images:
+- index: 1
+  image: Defrostrooper-RDSJMP-JP-NPR.png
+sets:
+  ja:
+  - set_number: RD/SJMP-JP029
+    set_name: Saikyō Jump August 2023 promotional card
+    rarities:
+    - Normal Parallel Rare
+yugipedia_page_id: 974974
+---
 konami_id:
 name:
   en: Thestalos the Firestorm Monarch
@@ -104129,63 +104186,6 @@ sets:
     rarities:
     - Ultra Rare
 yugipedia_page_id: 937289
----
-konami_id:
-name:
-  en: Defrostrooper
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: デフロストルーパー
-  ja_romaji: Defurosutorūpā
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-requirement:
-  en: |-
-    During the turn you Normal Summoned this card.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: |-
-    このカードを召喚したターンに発動できる。
-  ko:
-  zh-TW:
-  zh-CN:
-effect:
-  en: |-
-    Send the top 2 cards of your opponent's Deck to the Graveyard. Then, if your opponent has 5 or more Spell/Trap Cards in their Graveyard, you can add 1 Equip Spell Card from your Graveyard to your hand.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: |-
-    相手のデッキの上からカード２枚を墓地へ送る。その後、相手の墓地の魔法・罠カードが５枚以上の場合、自分の墓地の装備魔法カード１枚を選んで手札に加える事ができる。
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Cyberse / Effect
-attribute: FIRE
-level: 3
-atk: 1200
-def: 100
-images:
-- index: 1
-  image: Defrostrooper-RDSJMP-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/SJMP-JP029
-    set_name: Saikyō Jump August 2023 promotional card
-    rarities:
-    - Normal Parallel Rare
-yugipedia_page_id: 974974
 ---
 konami_id:
 name:
