--- a/data/rush/yugipedia978931.yaml
+++ b/data/rush/yugipedia978931.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手メインフェイズに、カードが相手の墓地へ送られた時に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,12 +33,15 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    ［相手の手札の数］×３００ダメージを相手に与える。デッキのカードが相手の墓地へ送られた時にこのカードを発動した場合、さらに相手の手札をランダムに１枚選んで墓地へ送る。
   ko:
   zh-TW:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Psychic Musician
 images:
 - index: 1
   image: AmusiAnnoyance-RDKP14-JP-OP.png
