--- a/rush.yaml
+++ b/rush.yaml
@@ -66443,7 +66443,7 @@ atk: 2000
 def: 1500
 materials:
   en: |-
-    "CAN:D" + "A.I. Bear Can"
+    "CAN:D" + "Ice Pop Bear"
   de:
   es:
   fr:
@@ -72396,7 +72396,7 @@ atk: 2000
 def: 1500
 materials:
   en: |-
-    "Ama Lilith" + "A.I. Bear Can"
+    "Ama Lilith" + "Ice Pop Bear"
   de:
   es:
   fr:
