--- a/data/cards/24081957.yaml
+++ b/data/cards/24081957.yaml
@@ -1,7 +1,7 @@
 konami_id: 18847
 password: 24081957
 name:
-  en: Corrupted Gem of Rebellion - Snake Eye
+  en: Tainted Treasure of Treason - Snake-Eye
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 反逆的罪宝-蛇眼
 text:
   en: |-
-    Target 1 face-up monster on the field; place it face-up in its owner's Spell & Trap Zone as a Continuous Spell. You can only activate 1 "Corrupted Gem of Rebellion - Snake Eye" per turn.
+    Target 1 face-up monster on the field; place it face-up in its owner's Spell & Trap Zone as a Continuous Spell. You can only activate 1 "Tainted Treasure of Treason - Snake-Eye" per turn.
   de:
   es:
   fr:
@@ -30,9 +30,12 @@ text:
     这个卡名的卡1回合只能发动1张。①：可以以场上的1只表侧表示怪兽为对象发动。将那只怪兽视为永续魔法卡以表侧表示放置到原本的持有者的魔法陷阱区。
 card_type: Spell
 property: Normal
+series:
+- Tainted Treasure
+- Snake-Eye
 images:
 - index: 1
-  image: CorruptedGemofRebellionSnakeEye-DUNE-JP-R.png
+  image: TaintedTreasureofTreasonSnakeEye-DUNE-JP-R.png
 sets:
   ja:
   - set_number: DUNE-JP060
