--- a/data/cards/24081957.yaml
+++ b/data/cards/24081957.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>反<rt>はん</rt></ruby><ruby>逆<rt>ぎゃく</rt></ruby>の<ruby>罪<rt>ざい</rt></ruby><ruby>宝<rt>ほう</rt></ruby>－スネークアイ
-  ja_romaji: Hangyaku no Zaihō - Sunēku Ai
+  ja_romaji: Hangyaku no Zaihō - Sunēkuai
   ko: 반역의 죄보－스네이크아이
   ko_rr:
   zh-TW:
