--- a/data/cards/yugipedia992322.yaml
+++ b/data/cards/yugipedia992322.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: スネークアイ・ワイトバーチ
-  ja_romaji: Sunēku Ai Waito Bāchi
+  ja_romaji: Sunēkuai Waito Bāchi
   ko:
   ko_rr:
   zh-TW:
