--- a/data/cards/yugipedia992326.yaml
+++ b/data/cards/yugipedia992326.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>蛇眼の炎龍<rt>スネークアイズ・フランベルジュ・ドラゴン</rt></ruby>
-  ja_romaji: Sunēku Aizu Furanberuju Doragon
+  ja_romaji: Sunēkuaizu Furanberuju Doragon
   ko:
   ko_rr:
   zh-TW:
