--- a/data/cards/yugipedia992339.yaml
+++ b/data/cards/yugipedia992339.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>睨<rt>にら</rt></ruby>み<ruby>統<rt>す</rt></ruby>べるスネークアイズ
-  ja_romaji: Nirami Suberu Sunēku Ai
+  ja_romaji: Nirami Suberu Sunēkuaizu
   ko:
   ko_rr:
   zh-TW:
