--- a/data/cards/yugipedia992320.yaml
+++ b/data/cards/yugipedia992320.yaml
@@ -8,14 +8,14 @@ name:
   it:
   pt:
   ja: スネークアイ・オーク
-  ja_romaji: Sunēku Ai Ōku
+  ja_romaji: Sunēkuai Ōku
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can target of your 1 Level 1 FIRE monsters that is banished or in your GY; either add it to your hand or Special Summon it. You can send this card and 1 other face-up card you control to the GY; Special Summon 1 "Snake-Eye" monster from your hand or Deck, except "Snake-Eye Excel". You can only use each effect of "Snake-Eye Oark" once per turn.
+    If this card is Normal or Special Summoned: You can target of your 1 Level 1 FIRE monsters that is banished or in your GY; either add it to your hand or Special Summon it. You can send this card and 1 other face-up card you control to the GY; Special Summon 1 "Snake-Eye" monster from your hand or Deck, except "Snake-Eye Oark". You can only use each effect of "Snake-Eye Oark" once per turn.
   de:
   es:
   fr:
