--- a/data/cards/yugipedia992331.yaml
+++ b/data/cards/yugipedia992331.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>蛇<rt>じゃ</rt></ruby><ruby>眼<rt>がん</rt></ruby><ruby>神<rt>しん</rt></ruby><ruby>殿<rt>でん</rt></ruby>スネークアイ
-  ja_romaji: Jagan Shinden Sunēku Ai
+  ja_romaji: Jaganshinden Sunēkuai
   ko:
   ko_rr:
   zh-TW:
