--- a/data/cards/yugipedia992333.yaml
+++ b/data/cards/yugipedia992333.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>原<rt>げん</rt></ruby><ruby>罪<rt>ざい</rt></ruby><ruby>宝<rt>ほう</rt></ruby>－スネークアイ
-  ja_romaji: Genzaihō - Sunēku Ai
+  ja_romaji: Genzaihō - Sunēkuai
   ko:
   ko_rr:
   zh-TW:
